--- a/app/single-benefits.html
+++ b/app/single-benefits.html
@@ -77,21 +77,49 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>Всем привет, на связи Егор Романов. Меня часто спрашивают, стоит ли запускать продажи на Amazon или это сложно (у меня не получится; не хватит опыта; я не знаю английского; я работаю на работе и у меня не времени; ну и т.д., можете выбрать свой вариант сомнений). Поэтому сегодня расскажу о 5 ключевых преимуществах, которые развеют все ваши сомнения относительно бизнеса на Amazon. Именно из-за этих 5 преимуществ я сам начал заниматься Амазоном и именно поэтому я искренне рекомендую этот бизнес вам.</p>
+				<p>Сегодня мы расскажем вам о 5 ключевых преимуществах бизнеса на Amazon из-за которых и мы в своё время выбрали этот
+				бизнес.</p>
 
-				<p><strong>1. Амазон - это 100% онлайн-бизнес.</strong> Работать реально можно из любой точки мира, т.к. не нужно общаться с клиентами и не нужны сотрудники. Всё что нужно сделать - это доставить товар на склад Amazon и запустить продажи. Делается всё сидя за компьютером, нужен только интернет. Более того, времени на этот бизнес нужно пару часов в день на этапе запуска, далее несколько часов в неделю.</p>
+				<p><strong>1. Amazon - это 100% онлайн-бизнес.</strong> Развивать бизнес на Amazon реально можно из любой точки мира, т.к. всё, что нужно
+				сделать - это выбрать товар, найти поставщика в Китае, доставить товар на склад Amazon и запустить продажи. Делается это
+				всё удаленно из любой точки мира, нужен только интернет. Большой плюс этого бизнеса в том, что вам не нужно общаться с
+				клиентами и вам не нужны сотрудники, всю рутинную работу берет на себя Amazon. Т.к. у вас нет сотрудников, то в этом
+				бизнесе пропадает человеческий фактор (например, в обычном магазине ваш продавец может нагрубить клиентам и о вас
+				сложится негативное впечатление, на Amazon же всё автоматизированно).</p>
 
-				<p><strong>2. Продаем товары в основном на США</strong>, где рынок и платежеспособность аудитории гораздо круче, чем у нас. Даже продавая товар, который не пользуется особой популярностью и имеет высокую конкуренцию, у вас продажи будут идти лучше, чем если бы вы продавали аналогичный товар по России и СНГ. Ну и самое главное, зарабатываем мы в долларах, а значит нам абсолютно всё равно на все внешние факторы экономики.</p>
+				<p><strong>2. Продаем товары в на территории США, где рынок гораздо больше, а платежеспособность людей гораздо выше, чем в России и
+				СНГ. Даже продавая товар, который не пользуется особой популярностью и имеет высокую конкуренцию, у вас продажи будут
+				идти лучше, чем если бы вы продавали аналогичный товар по России и СНГ. Ну и самое главное, зарабатываем мы в долларах,
+				а значит нам абсолютно всё равно на все внешние факторы экономики и постоянные падения курса рубля.</p>
 
-				<p>Кстати, Джефф Безос (создатель Amazon), с недавнего времени №1 в списке Форбс. Как думаете, является ли это доказательством того, что Amazon - это действительно крутая площадка для продаж?!</p>
+				<p>Кстати, Джефф Безос (создатель Amazon), с недавнего времени №1 в списке Форбс. Как думаете, является ли это
+				доказательством того, что Amazon - это действительно отличная площадка для продаж?!</p>
 
-				<p><strong>3. Все автоматизировано самим сервисом Амазона.</strong> Не нужно заниматься доставкой товара, а клиенты платят деньги сразу же при покупке, т.к. для США это норма (скажите, часто ли у нас в России кто-то что-то покупает прямо на сайте, не пообщавшись с продавцом). По сути из всех бизнес-процессов есть только закупки (которые можно делать через брокера в Китае), запуск (делается 1 раз для 1 товара), и контроль показателей и складских остатков. Справится при должном подходе может любой человек, да и это гораздо легче, чем запустить любой классический бизнес.</p>
+				<p><strong>3. Все автоматизировано самим сервисом Amazon.</strong> Вам не нужно заниматься доставкой товара клиентам - это делает Amazon,
+				вам не нужно заботиться о хранении товара - это делает Amazon, вам не нужно заботиться о возвратах - это делает Amazon,
+				вам не нужно заботиться о приеме оплат - клиенты платят деньги сразу же при покупке на сайте Amazon, т.к. для США это
+				норма (скажите, часто ли у нас в России кто-то что-то покупает прямо на сайте, не пообщавшись с продавцом?). По сути из
+				всех бизнес-процессов есть только закупки (которые можно делать через брокера в Китае), выбор товара для запуска
+				(делается 1 раз для 1 товара), контроль показателей и складских остатков (своевременная закупка товара), и продвижение
+				продукта. Большинство рутинных процессов, на которые приходится тратить время в классическом бизнесе, на себя берет сам
+				Amazon.</p>
 
-				<p><strong>4. Низкие вложения</strong>, начать можно хоть со 100$. Для комфортного старта нужно 1200-1500$, скажите, как много вариантов запуска нормального бизнеса с такими вложениями?</p>
+				<p><strong>4. Низкие вложения,</strong> начать можно с суммы от 6-7 тысяч $ с учетом всех расходов и дополнительных затрат. Скажите честно,
+				какой бизнес можно запустить с такими небольшими вложениями? Даже в России трудно найти такой бизнес, а тут мы работаем
+				на рынок США.</p>
 
-				<p><strong>5. Заработок от 3000$ чистыми в месяц для США - это норма</strong> (это средняя зарплата там, то есть 3000$ в США - это как 35000 рублей в России). Более того, риск прогореть практически отсутсвует. Даже если вы выберете плохой товар, то товар можно распродать и отбить хотя бы часть вложений. Если вы будете развиваться в этом бизнесе, то потолка заработка там практически нет.</p>
+				<p><strong>5. Заработок от 3000$ чистыми в месяц для США - это норма </strong> (т.к. средняя зарплата в США около 3000$, то заработать её на
+				бизнесе в США равносильно заработку 35000 рублей в России). Более того, риск прогореть практически отсутсвует. Даже если
+				вы выберете плохой товар, то товар можно распродать и отбить хотя бы часть вложений. Если вы будете развиваться в этом
+				бизнесе, то потолка заработка там практически нет. Но важно понимать, что прибыль в бизнесе на Amazon напрямую зависит
+				от ваших вложений. Хороший товар дает от 50 до 120% чистой прибыли к вложениям при распродаже партии товара. Поэтому
+				важно понимать, что в бизнесе на Amazon нельзя вложить 1000$ и каждый месяц вынимать из бизнеса десятки тысяч долларов.
+				Прибыль напрямую зависит от вложений в товар.</p>
 
-				<p>Если вы внимательно причитали информацию выше и поняли суть, почему бизнес на Amazon так привлекателен, то ваш вопрос стоит запускать продажи на Amazon или нет должен отпасть раз и на всегда.</p>
+				<p>Если вы внимательно причитали информацию выше и поняли суть, почему бизнес на Amazon так привлекателен, то ваш вопрос
+				стоит запускать продажи на Amazon или нет должен отпасть раз и на всегда. Бизнес на Amazon - это перспективное
+				направление с заработком в долларах. Конечно, бизнес на Amazon это точно такой же бизнес, как и любой другой, со своими
+				нюансами и подводными камнями, и для получения результата на Amazon нужно активно работать.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
