--- a/app/single-bussiness.html
+++ b/app/single-bussiness.html
@@ -76,25 +76,48 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>В данной статье мы хотим рассказать вам о том, что такое бизнес на Amazon простыми словами. Если проводить аналогию с российским рынком, то можно сказать, что Amazon - это смесь Авито и Яндекса. Кстати, у Яндекса есть сервис Яндекс.Маркет, и можно сказать, что он чуть-чуть похож на Amazon, только Яндекс.Маркет в России совсем не популярен, а вот Amazon в США - это гигант, на котором делаются более 50% от всех продаж в интернете (сложно представить такие цифры, но действительно, на Amazon делается больше продаж, чем на всех остальных американских сайтах вместе взятых). Так вот, Amazon - это такая «доска объявлений», на которой предприниматели со всего мира продают свои товары. Внутри Amazon встроена своя реклама, как реклама в Яндекс.Директ, так же у Amazon есть свои склады, где храниться товар, и так же Amazon сам занимается доставкой товара клиентам.</p>
+				<p>В данной статье мы хотим рассказать вам о том, что такое бизнес на Amazon простыми словами. Если проводить аналогию с
+				российским рынком, чтобы вам было понятнее, что такое Amazon, то можно сказать, что Amazon - это маркетплейс на подобии
+				Озон или Вайлдберрис. То есть Amazon это сайт, на котором различные продавцы продают абсолютно разные товары. Amazon
+				пришел на этот рынок одним из первых в мире, еще в далеких 1990х годах, а все российские маркетплейсы уже были так или
+				иначе скопированы с Amazon. Amazon в США - это гигант, на котором делаются более 50% от всех продаж в интернете (сложно
+				представить такие цифры, но действительно, на Amazon делается больше продаж, чем на всех остальных американских сайтах
+				вместе взятых). Так вот, Amazon - это такая «доска объявлений», на которой предприниматели со всего мира продают свои
+				товары. Внутри Amazon встроена своя реклама, как реклама в Яндекс.Директ, так же у Amazon есть свои склады, где
+				храниться товар, и так же Amazon сам занимается доставкой товара клиентам.</p>
 
-				<p><strong>Если говорить совсем просто и не особо вникать в нюансы, то для запуска бизнеса на Amazon потребуется сделать 3 шагов:</strong></p>
+				<p><strong>Если говорить совсем просто и не особо вникать в нюансы, то для запуска бизнеса на Amazon потребуется сделать 3 шага:</strong></p>
 
 				<p>Шаг 1. С помощью аналитики выбрать товар, который будет пользоваться спросом и который будет выгодно продавать. Самое важное, что нужно запомнить: от выбора товара в бизнесе на Amazon зависит вообще всё! Если товар выбран плохо, то вся дальнейшая работа с этим товаром не принесет особого результата.</p>
 
+				<p>Для Amazon создано множество сервисов для аналитики продаж, и выбирать товар для продажи на данной площадке нужно
+				ориентируясь строго на показатели статистики.</p>
+
 				<p>Шаг 2. Найти поставщика и заказать партию товара с доставкой на склад Amazon. На этом этапе важно оценить качество поставщика и его товара, точно просчитать, по какой себестоимости мы можем позволить себе закупать товар, оптимизировать упаковку, просчитать логистику и решить вопрос с правильным хранением товара.</p>
+
+				<p>Многие начинающие продавцы на Amazon ошибочно думают, что нужно найти самый дешевый вариант товара. На самом деле нужно
+				найти самый качественный вариант товара по оптимальной цене. Если вы хотите продавать самый дешевый товар низкого
+				качества, то ваш бизнес на Amazon быстро закончится из-за негативных отзывов клиентов, которые "убьют" ваши продажи.</p>
 
 				<p>Шаг 3. Дождаться, пока товар придет на склад Amazon, и начать продвигать товар, оптимизировать рекламу, набирать статистику и развиваться. На этом этапе важно правильно построить продажи, рекламу, и др.</p>
 
+				<p>Не ждите, что ваш товар сразу же начнут раскупать. В бизнесе на Amazon не бывает быстрых результатов. Сначала вам нужно
+				набрать статистику, раскрутить продажи и раскрутить свой аккаунт, и со временем у вас получиться увеличить обороты и
+				прибыль.</p>
+
 				<p>То есть, если говорить ещё проще, то <strong>Amazon - это классический бизнес по продаже товаров через Интернет, только продаем товары мы не в своем регионе, а в США, где рынок гораздо больше, люди более финансово благополучны и готовы тратить гораздо больше, ну и конечно же прибыль выходит в долларах, что тоже очень привлекательно и надежно.</strong></p>
 
-				<p>На первый взгляд может показаться, что бизнес на Amazon - это достаточно просто: купил товар - доставил его на склад - продал, но на самом деле в этом бизнесе огромное количество нюансов, которые нужно учитывать, и которые вы нарабатываете только с опытом.</p>
+				<p>На первый взгляд может показаться, что бизнес на Amazon - это достаточно просто: купил товар в Китае - доставил его на
+				склады Amazon в США - продал дорого за доллары, но на самом деле в этом бизнесе огромное количество нюансов, огромное
+				количество подводных камней, и для ведения этого бизнеса вам нужен огромный опыт, т.к. вам нужно конкурировать с
+				продавцами со всего мира.</p>
 
 				<p>Давайте рассмотрим бизнес на Amazon поподробнее и поговорим о том, какие же есть стратегии при продаже товаров на Amazon. Мы выделяем всего 2 основных стратегии (их больше, но стабильный бизнес можно построить только по данным стратегиям) - Онлайн Арбитраж и Private Label.</p>
 
 				<h2>1. Онлайн Арбитраж.</h2>
 
-				<p>Если вы зайдете на Amazon.com и посмотрите "объявления" различных (объявление с товаром называется листинг), то вы увидите, что через одно объявление один и тот же товар продают несколько разных продавцов по разной цене. Всё это происходит потому, что все листинги, которые созданы продавцами на Amazon, принадлежат не продавцам, они принадлежат Amazon, т.е. они находятся в "общем пользовании", и любой человек, у кого есть точно такой же товар (за исключением запатентованных товаров) может подключиться к данному объявлению и начать продавать свой товар. При этому 60-80% продаж товара будет делать основной владелец объявления, а оставшаяся часть будет распределяться между людьми, которые подключились к объявлению.</p>
+				<p>Если вы зайдете на Amazon.com и посмотрите "объявления" (объявление с товаром называется листинг) о продаже различных
+				товаров, то вы увидите, что через одно объявление один и тот же товар продают несколько разных продавцов по разной цене. Всё это происходит потому, что все листинги, которые созданы продавцами на Amazon, принадлежат не продавцам, они принадлежат Amazon, т.е. они находятся в "общем пользовании", и любой человек, у кого есть точно такой же товар (за исключением запатентованных и брендированных товаров) может подключиться к данному объявлению и начать продавать свой товар. При этом 50-80% продаж товара будет делать основной владелец объявления, а оставшаяся часть будет распределяться между другими продавцами, которые подключились к данному объявлению.</p>
 
 				<p>Стратегия Онлайн Арбитраж заключается в том, что вы находите объявление, к которому можно подключиться, находите поставщика данного товара по выгодной цене (поставщиков ищем в США - это обеспечивает быструю доставку товара и необходимую документацию для того чтобы подключиться к объявлению), заказываете товар и доставляете на склад Amazon, подключаетесь к объявлению, и абсолютно без вложений в рекламу просто ждете, пока ваш товар распродастся через уже готовое объявление.</p>
 
@@ -102,7 +125,11 @@
 
 				<h2>2. Private Label.</h2>
 
-				<p>Стратегия, при которой вы производите товар под собственным брендом, создаете уникальное объявление для продажи товара и самостоятельно продвигаете это объявление, вкладываетесь в рекламу и забираете 60-80% продаж через это объявление (в случае, если к вам не будут подключаться другие продавцы, а такое возможно, то вы сможете забирать до 100% продаж со своего объявления).</p>
+				<p>Стратегия, при которой вы производите товар под собственным брендом, создаете уникальное объявление для продажи товара и
+				самостоятельно продвигаете это объявление, вкладываетесь в рекламу. Если вы всё делаете грамотно и соблюдаете
+				безопасность, то вы забираете все 100% продаж со своего объявления, и к вам не могут подключиться продавцы по стратегии
+				Онлайн Арбитраж. Но тут очень важно знать нюансы работы Amazon и его правила, иначе можно потерять огромное количество
+				продаж.</p>
 
 				<p>Плюс данной стратегии в том, что вам нужно заниматься только 1 товаром и вы можете полностью контролировать продвижение своего товара, вы можете увеличивать количество продаж своего товара. Запустив и раскрутив один товар по данной стратегии он будет приносить вам прибыль на протяжении нескольких лет. При данной стратегии товар придется производить в Китае (можно и в других странах, но Китай обычно выгоднее), нужно разрабатывать уникальную упаковку и производить товар под своим брендом (чтобы было меньше желающих подключиться к объявлению), из-за этого сроки производства товара с доставкой обычно занимают 1,5-2 месяца, плюс уходит время на раскрутку товара. Рекомендованный бюджет для запуска бизнеса по данной стратегии от 7000$.</p>
 
