--- a/app/single-cant-show-product.html
+++ b/app/single-cant-show-product.html
@@ -80,13 +80,27 @@
 
 				<p>Почему это важно? Ваш товар - это 80% успеха вашего бизнеса на Amazon. Если вы начнете рассказывать про свой товар на каждом углу, то его 100% скопируют и конкуренция в вашей нише возрастет. Как вы думаете, если вы предложите товар, который приносит прибыль, и продемонстрируете все свои продающие материалы, то это будет интересно для копирования или все просто посмотрят на ваш товар ради интереса и не заинтересуются возможностью заработать?</p>
 
-				<p>Лично мы никому не демонстрируем свои успешные товары, т.к. в начале нашего пути мы несколько раз прогорали на таких ошибках. Более того, одна очень "увлекательная" история произошла с нашим клиентом, которому мы запускали магазин "под ключ". Когда мы выбрали ему товар для продажи, он решил, что нужно посоветоваться с другими "компетентными" людьми, в итоге стал открыто обсуждать запуск этого товара на форумах, советоваться с другими продавцами на Amazon, и к тому моменту как мы запустили ему товар, конкуренция уже возрасла более чем в 2 раза. Конечно, товар был хороший, и он начал зарабатывать, но если бы он держал товар в тайне, то денег на раскрутку бы он потратил меньше, а зарабатывал бы он больше.</p>
+				<p>Лично мы никому не демонстрируем свои успешные товары, т.к. в начале нашего пути мы несколько раз прогорали на таких
+				ошибках. Например, на один из наших товаров, который мы показывали, накрутили плохих отзывов, видимо просто из зависти.
+				В итоге наши продажи упали. Так же был случай, когда наш потенциальный клиент, который захотел заказать у нас магазин
+				под ключ, не нашел ничего более умного, и просто запустил сам точно такой же товар, как у нас. Более того, одна очень
+				"увлекательная" история произошла с нашим клиентом, которому мы запускали магазин "под ключ". Когда мы выбрали ему товар
+				для продажи, он решил, что нужно посоветоваться с другими "компетентными" людьми. В итоге он стал открыто обсуждать
+				запуск этого товара на форумах, советоваться с другими продавцами на Amazon, и к тому моменту как мы запустили ему товар
+				(естественно, он нам ничего не сказал про свои обсуждения, и мы узнали об этом позже), конкуренция уже возрасла более
+				чем в 2 раза. Конечно, товар был хороший, и он начал зарабатывать, но если бы он держал товар в тайне, то денег на
+				раскрутку бы он потратил в разы меньше, а зарабатывал бы он гораздо больше.</p>
 
 				<p>Как вы думаете, если вы найдете какой-нибудь бизнес в интернете и напишите его владельцу следующее: "Здравствуйте, увидел ваш сайт в интернете, интересный у вас бизнес. Скажите пожалуйста контакты своих поставщиков, где покупаете товар, скиньте мне копию своего сайта и копию рекламной кампании, и скиньте мне скрипты продаж для менеджеров, и если есть контакты курьера, который занимается у вас доставкой, то я бы тоже не отказался. Когда сможете выслать мне всё?". Вы удивитесь, если услышите на такую просьбу ответ "НЕТ!"?! Вот, когда вы демонстрируете свой товар на Amazon, то по сути вы точно так же раскрываете все карты своего бизнеса. Для опытного продавца на Amazon раскрытие своего товара - это тоже самое, что выложить в открытый доступ все данные своей банковской карты и при этом отключить подтверждение платежей по смс.</p>
 
-				<p>Кстати, мы часто проходим обучения по теме Amazon в США (в онлайн формате), и за всё это время мы не встречали еще ни одного спикера, который бы рассказывал о том, какой товар он продает.</p>
+				<p>Кстати, мы часто проходим обучения по теме Amazon в США (в онлайн формате), и за всё это время мы не встречали еще ни
+				одного спикера, который бы рассказывал о том, какой товар он продает. Любой Amazon-предприниматель прекрасно понимает,
+				что не стоит демонстрировать свой товар, который работает, ведь товар могут скопировать, а могут просто за пару десятков
+				долларов накрутить плохих отзывов, особенно в России и СНГ.</p>
 
-				<p>Так что думайте своей головой и не рассказывайте про свой товар на каждом углу.</p>
+				<p>Так что думайте своей головой и не рассказывайте про свой товар на каждом углу. Конечно, если вам не жалко терять свои
+				деньги, то вы можете везде рассказывать о своем товаре, но ни один адекватный человек делать этого скорее всего не
+				будет.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
