--- a/app/single-developments.html
+++ b/app/single-developments.html
@@ -76,7 +76,7 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>Многие почему-то ассоциируют Amazon исключительно с розничными продажами, но на самом деле это очень разносторонняя компания, которая занимается многими направлениями, в числе которых есть и уникальные разработки. Сегодня я хочу рассказать о 3 вещах, узнав о которых, вы полюбите Amazon ещё больше.</p>
+				<p>Многие почему-то ассоциируют Amazon исключительно с розничными продажами, но на самом деле это очень разносторонняя компания, которая занимается многими направлениями, в числе которых есть и уникальные разработки. Сегодня мы расскажем вам о 3 вещах, узнав о которых, вы полюбите Amazon ещё больше.</p>
 
 				<h2>1) Amazon PrimeAir</h2>
 
