--- a/app/single-faq.html
+++ b/app/single-faq.html
@@ -100,11 +100,20 @@
 
 				<h2>6. Как быстро можно окупить свои вложения?</h2>
 
-				<p>Если мы говорим о стратегии Онлайн Арбитраж, то окупаемость займет 1-2 месяца, т.к. с распродажи первой партии товара вы уже выходите в плюс. Если говорить о Private Label, то тут при правильном подходе вы окупитесь за 5-6 месяцев с начала продаж, т.к. это более долгосрочная стратегия (так же учитывайте срок производства и доставки товара).</p>
+				<p>Окупаемость вложений напрямую зависит от суммы ваших вложений. Если мы говорим о стратегии Онлайн Арбитраж, то можно
+				окупить вложения и за 1-2 месяца продаж. Например, купили товар на 5000$, продали с маржой 100% и вынули 10 тысяч
+				долларов. Если бюджет меньше, то окупаться вы будете дольше. Если говорить о Private Label, то тут при правильном
+				подходе вы окупитесь за 5-6 месяцев с начала продаж, т.к. это более долгосрочная стратегия (так же учитывайте срок
+				производства и доставки товара до начала продаж), но тут всё напрямую зависит от ваших навыков рекламы.</p>
 
 				<h2>7. Нужно ли регистрировать бизнес в США и нужно ли самому физически ездить в США?</h2>
 
-				<p>Нет, всё что вам понадобится, это паспорт, кредитная карта, и карта Payoneer для вывода средств с Amazon. Всё можно оформить из любой точки мира. Ни регистрации бизнеса в США, ни физического присутствия в США не требуется. Всё делается онлайн, нужен только доступ в интернет.</p>
+				<p>Нет, всё что вам понадобится, это паспорт, кредитная карта, и счет Payoneer для вывода средств с Amazon. Всё это можно
+				оформить из любой точки мира. Ни регистрации бизнеса в США, ни физического присутствия в США не требуется. Всё делается
+				онлайн, нужен только доступ в интернет. Конечно, если вы хотите стать крупным продавцом на Amazon и если ваши
+				первоначальные вложения от 50 тысяч долларов, то вы можете оформить бизнес на Amazon на компанию из США, чтобы в
+				последствии продать свой магазин как готовый бизнес, но это абсолютно не обязательно и требует большого бюджета.
+				Начинать продажи на Amazon намного логичнее в качестве физического лица.</p>
 
 				<h2>8. Нужно ли знать английский язык для работы с Amazon?</h2>
 
@@ -116,7 +125,14 @@
 
 				<h2>10. Какой шанс, что я вложу деньги в Amazon, и у меня ничего не получится и я всё потеряю?</h2>
 
-				<p>Скажу честно, что меня самого привлекло в бизнесе на Amazon, так это то, что делая инвестицию в Amazon вы практически 100% вернете деньги в полном объеме рано или поздно (конечно, как и в любом бизнесе бывают форс-мажоры, но при самом плохом раскладе вы потеряете всего лишь часть первоначальных вложений). В любом случае со временем вы продадите свой товар через Amazon, и вам вернуться первоначальные инвестиции, хотя бы частично. Поэтому риска потерять все свои деньги на Amazon просто нет.</p>
+				<p>Шанс полной потери средств практически равен нулю, если вы все делаете с умом. Конечно, вы можете отправить деньги
+				поставщику через Вестерн Юнион, понадеявшись на его честное слово, и тогда вас просто обманут на все ваши деньги, но
+				давайте рассматривать только адекватные случаи. Делая инвестицию в Amazon вы практически 100% вернете деньги в полном
+				объеме рано или поздно (конечно, как и в любом бизнесе бывают форс-мажоры, но при самом плохом раскладе вы потеряете
+				всего лишь часть первоначальных вложений). В любом случае со временем вы продадите свой товар через Amazon, и вам
+				вернуться первоначальные инвестиции (если вы совсем не угадали с товаром или рынок очень сильно изменился, пока ваш
+				товар изготавливался, то вы тоже вернете свои вложения хотя бы частично). Поэтому риска потерять все свои деньги на
+				Amazon нет при условии, если вы подходите к этому бизнесу с опытом и со знаниями.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
