--- a/app/single-financials.html
+++ b/app/single-financials.html
@@ -76,15 +76,20 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>Начну с банальных вещей: обычно, когда вы запускаете бизнес на Amazon, вы планируете уложиться в рамки своего бюджета. И не важно какой он, 1000$, 5000$, 10000$, 100000$ или больше, ведь в действительности важна не сумма, а то как вы ей управляете. Ведь при грамотном управление финансами можно заработать, имея на старте даже 100$, а при ошибках можно потерять десятки тысяч долларов. Поэтому сегодня мы поделиться с вами своим опытом и расскажем, как мы рекомендую распределять деньги, на чем можно сэкономить при запуске, а на чем экономить ни в коем случае нельзя.</p>
+				<p>Начнем с банальных вещей: обычно, когда вы запускаете бизнес на Amazon, вы планируете уложиться в рамки своего бюджета.
+				И не важно какой он, 5000$, 10000$, 100000$ или больше, ведь в действительности важна не сумма, а то, как вы ей
+				управляете. Ведь при грамотном управление финансами можно хорошо заработать, имея на старте даже 5000$, а при ошибках
+				можно потерять десятки тысяч долларов. Поэтому сегодня мы поделиться с вами своим опытом и расскажем, как мы рекомендую
+				распределять деньги, на чем можно сэкономить при запуске, а на чем экономить ни в коем случае нельзя.</p>
 
 				<p>Первый вопрос после того как вы выбрали продукт для продаж на Amazon — это «сколько единиц продукта нужно закупать первоначально?». Если мы говорим о стратегии Онлайн Арбитраж, то закупить можно любое количество товара, хоть 10 штук. По стратегии Private Label уже нужно считать. Когда вы делали product research (искали продукт) вы анализировали, сколько продаж делают ваши конкуренты и на основе анализа вы должны приблизительно понимать, на сколько продаж в день вы можете рассчитывать.</p>
 
 				<p>Например, вы ориентируетесь на 8 продаж в день. Соответственно, считаем с запасом — 10 продаж в день. Далее вы должны посчитать, сколько по времени изготавливается ваш продукт - допустим вам обещают 2 недели, но т.к. при работе с Китаем не стоит серьезно относится к обещаниям по срокам — считаем 3 недели. И неделю на авиа доставку. Плюс время на обработку заказа самим Amazon - пара недель. Соответственно, срок от изготовления вашего продукт до того момента, пока он окажется на складе Amazon — 1,5 месяца.</p>
 
-				<p>Как правило, большинство дозакупают товар с первой выручки/прибыли, т.е. через 14 дней с момента начала продаж. То есть простым подсчетом мы понимаем, что в таком случае надо закупить товар так, чтобы его хватило на 2 месяца (с запасом), т.к. крайне не рекомендуется чтобы на складе не было товара. Ну и если вы ориентируетесь на 10 продаж в день, то вам нужно 60 дней умножить на 10 — 600 единиц товара минимум. Мы рекомендуем всё считать из такой логики, но учитывать возможные задержки, рост продаж, и т.д. и брать всегда чуть-чуть с запасом.</p>
+				<p>Как правило, доставка делается морем за 3 недели, потому что это гораздо выгоднее, соответственно, нужно рассчитать
+				сроки в зависимости от выгодного способа доставки.</p>
 
-				<p>Если это ваш первый продукт, то рекомендовано вообще закупить первую тестовую партию 50-100 единиц, проверить на них продажи, рассчитать всё, набрать первые отзывы, и потом только считать основную партию товара.</p>
+				<p>То есть простым подсчетом мы понимаем, что в таком случае надо закупить товар так, чтобы его хватило на 2 месяца (с запасом), т.к. крайне не рекомендуется чтобы на складе не было товара. Ну и если вы ориентируетесь на 10 продаж в день, то вам нужно 60 дней умножить на 10 — 600 единиц товара минимум. Мы рекомендуем всё считать из такой логики, но учитывать возможные задержки, рост продаж, и т.д. и брать всегда чуть-чуть с запасом.</p>
 
 				<p>Второй по популярности вопрос — это «Какую делать доставку?». Тут два варианта — морская доставка и авиа доставка. Морская обычно занимает около 3 недель, авиа доставка чуть меньше 1 недели. В данном случае всё зависит от веса и объема вашего продукта, и надо смотреть разницу по цене. Если разница в доставке больше чем в 2 раза, то для первой доставки выбираем морскую доставку и ожидаем товар чуть дольше, зато делаем всё экономичнее. Далее — часть продукции отправляем самолетом, часть морем. Если же разница в доставке не сильно сказывается на вашей марже, то первую партию отправляем авиа, или часть авиа, часть морем, чтобы оптимизировать расходы. В идеале выйти на такие объемы закупок, чтобы вы могли всё время отправлять товар морем, и вас устраивали эти сроки.</p>
 
