--- a/app/single-find-supplier.html
+++ b/app/single-find-supplier.html
@@ -76,7 +76,9 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>Сейчас мы ежемесячно покупаем товаров в Китае на 30-70 тысяч долларов для продажи на Amazon, поэтому думаю наш опыт работы с Китаем будет вам полезен. Я расскажу самый простой, дешевый, и безопасный способ поиска поставщиков на этом рынке.</p>
+				<p>Сейчас мы ежемесячно покупаем товаров в Китае на 30-70 тысяч долларов для продажи на Amazon, поэтому, надеемся, что наш
+				опыт работы с Китаем будет вам полезен. В этой статье мы расскажем вам самый простой, дешевый, и безопасный способ
+				поиска поставщиков на этом рынке.</p>
 
 				<p>Начнем с того, что большинство поставщиков Китая есть на сайте <a href="http://www.alibaba.com" target="blank">alibaba.com</a>, поэтому если у вас нет опыта работы с Китаем, то начинайте поиски именно с этого сайта. Там вы в любом случае сможете найти предложение близкое к лучшему по рынку.</p>
 
@@ -86,7 +88,7 @@
 
 				<h2>Правило 2. Избегайте поиска электроники.</h2>
 
-				<p>Электроника это конечно хорошая ниша, но очень проблемная в плане брака, т.к. вам всегда нужно помнить о вашем конечном потребителе. Электроника - это ниша где все очень легко может пойти не так, малейший брак при изготовлении в самом начале и вся партия идет на смарку, а узнаете вы об этом только при получении. В случае поломки продукта или получении вашим клиентом травмы при использовании вашего продукта вся ответственность ложиться на вас. Так же вы должны получить все возможные сертификаты от вашего поставщика только для того чтобы ваш продукт успешно прошел таможню. Работать с электроникой из Китая не советую, по крайней мере на начальных этапах.</p>
+				<p>Электроника это конечно хорошая ниша, но очень проблемная в плане брака, т.к. вам всегда нужно помнить о вашем конечном потребителе. Электроника - это ниша где все очень легко может пойти не так, малейший брак при изготовлении в самом начале и вся партия идет на смарку, а узнаете вы об этом только при получении. В случае поломки продукта или получении вашим клиентом травмы при использовании вашего продукта вся ответственность ложится на вас. Так же вы должны получить все возможные сертификаты от вашего поставщика только для того чтобы ваш продукт успешно прошел таможню. Работать с электроникой из Китая не советуем, по крайней мере на начальных этапах.</p>
 
 				<h2>Правило 3. Проведите свой собственный анализ поставщиков.</h2>
 
@@ -102,7 +104,7 @@
 
 				<p>Каков уровень удовлетворенности? Хорошие поставщики всегда смогут предоставить вам несколько отзывов от их довольных клиентов. Запросите информацию об этих клиентах.</p>
 
-				<h2>Правило 6. Если вас что то не устраивает, двигайтесь дальше.</h2>
+				<h2>Правило 6. Если вас что-то не устраивает, двигайтесь дальше.</h2>
 
 				<p>Китай большой и там огромное количество производств, вы всегда сможете найти нужного поставщика. Если что-то в общении и в работе вашего поставщика вас не устраивает или смущает и кажется подозрительным, то просто переключайтесь на следующего.</p>
 
@@ -118,7 +120,11 @@
 
 				<h2>Как делаем мы, когда ищем нового поставщика?</h2>
 
-				<p>Т.к. сейчас мы запускаем новые магазины на Амазон с новыми товарами практически каждый месяц, то регулярно приходится искать новых поставщиков. Ищем мы их так же как описал выше, но я работаю через брокера, который за небольшую плату делает проверку производства (перед тем, как я перевожу им деньги за заказ), и делает проверку товара перед отправкой на склад Амазон. Работа через брокера снижает риски к 0, но брокер так же должен быть проверенным, желательно по рекомендации, т.к. они тоже часто оказываются не добросовестными.</p>
+				<p>Т.к. сейчас мы запускаем новые магазины на Amazon с новыми товарами несколько раз в месяц, то нам регулярно приходится
+				искать новых поставщиков. Ищем мы их так же, как описано выше, но мы работаем через брокеров, которые за небольшую плату
+				делают проверку производства (перед тем, как мы переводим деньги за товар), и делают проверку товара перед отправкой на
+				склад Amazon. Работа через брокера снижает риски к 0, но брокер так же должен быть проверенным, желательно по
+				рекомендации, т.к. они тоже часто оказываются не добросовестными.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
