--- a/app/single-find.html
+++ b/app/single-find.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>Как найти товар для продажи на Amazon по стратегии Private Label?!</title>
+	<title>Как найти товар для продажи на Amazon?!</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -64,7 +64,7 @@
 		<div class="container">
 
 			<div class="main-text">
-				<h1>Как найти товар для продажи на Amazon по стратегии Private Label?!</h1>
+				<h1>Как найти товар для продажи на Amazon?!</h1>
 			</div>
 
 		</div>
@@ -100,7 +100,7 @@
 				вообще всё что угодно, можно даже посчитать, сколько зарабатывают ваши конкуренты. Поэтому и нужно выбирать товар именно
 				на основе аналитики, т.к. с помощью программ вам доступны все данные по выбору товара, вам открыта вся статистика на
 				Amazon! И с помощью программ вы можете точно выбрать товар, который будет продаваться! Вы вводите в программу аналитики
-				нужные вам параметры, и для вас подбираются подходящие под заданные параметры товары.</p>
+				нужные вам параметры, и для вас подбираются подходящие под заданные параметры товары</p>
 
 				<p>Почему выбор товара - это так важно? Потому что выбор товара - это тяжелая аналитическая работа, которая требует
 				огромного количества знаний. Вам нужно просчитать все до мелочей, вам нужно спрогнозировать продажи, вам нужно
@@ -134,6 +134,14 @@
 
 				<p>Первые 2 скриншота это топ-2 продавца этого товара, и какие у них метрики. Третий скриншот - это кол-во запросов в месяц
 				этого товара. Четвёртый - объём рынка этого товара. Пятый - это кол-во конкурентов продающих этот товар.</p>
+
+				<div class="images">
+					<img class="img-responsive" src="img/blog/single-find-img-1.jpg" alt="images">
+					<img class="img-responsive" src="img/blog/single-find-img-2.jpg" alt="images">
+					<img class="img-responsive" src="img/blog/single-find-img-3.jpg" alt="images">
+					<img class="img-responsive" src="img/blog/single-find-img-4.jpg" alt="images">
+					<img class="img-responsive" src="img/blog/single-find-img-5.jpg" alt="images">
+				</div>
 
 				<p>Как вы видите, товар очень перспективный, и теперь остаётся просто вложить деньги, и можно запускаться сразу на
 				максимум, т.к. товар практически на 100% зайдет. Ориентировочная прибыль по товару с такими параметрами от 9000$ в
@@ -176,14 +184,6 @@
 				Если продукт соответствует вышеперечисленным требованиям, то стоит просчитать затраты на рекламу, затраты на отзывы,
 				просчитать когда нужно докупать товар и сколько денег понадобится для своевременной дозакупки товара, и т.д., так что
 				перед тем, как начать продавать на Amazon, нужно досконально изучить информацию по поводу выбора товара.</p>
-
-				<div class="images">
-					<img class="img-responsive" src="img/blog/single-find-img-1.jpg" alt="images">
-					<img class="img-responsive" src="img/blog/single-find-img-2.jpg" alt="images">
-					<img class="img-responsive" src="img/blog/single-find-img-3.jpg" alt="images">
-					<img class="img-responsive" src="img/blog/single-find-img-4.jpg" alt="images">
-					<img class="img-responsive" src="img/blog/single-find-img-5.jpg" alt="images">
-				</div>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
