--- a/app/single-holiday-sales.html
+++ b/app/single-holiday-sales.html
@@ -82,7 +82,7 @@
 
 				<p>А на какие тогда праздники увеличивается количество продаж?! На самом деле в США не так много праздников, которые могут значительно увеличить продажи на Amazon.</p>
 
-				<p>Я бы выделил всего 3 праздника:</p>
+				<p>Можно выделить всего 3 основных праздника:</p>
 
 				<ul>
 					<li>4 июля — День независимости. В этот день в США принято собираться семьями/друзьями на природе, жарить мясо на гриле, и т.д. В дни перед этим праздником растут продажи товаров, связанные с отдыхом на природе, это могут быть как всякие переносные стулья, так и специальная посуда, так и инвентарь для игр на свежем воздухе.</li>
