--- a/app/single-how-much-money.html
+++ b/app/single-how-much-money.html
@@ -76,13 +76,49 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p><span>Онлайн Арбитраж</span> - для старта по данной стратегии для комфортного старта я бы ориентировался на сумму 1500-2000$. На данную сумму можно запустить несколько товаров. Заходя с меньшим бюджетом вы получите гораздо больше заморочек с поставщиками, товарами, и прочим и вещами. При этом прибыль с меньшими оборотами будет так же не особо большой, ну а времени вы будете тратить ровно столько же. При этом для начала без опыта суммы больше 2000-2500$ я бы тоже не рассматривал, чтобы не особо рисковать. Минимальная сумма для работы по данной стратегии - от 500$ (но протестировать первые товары можно и на 100$ и на 200$). Максимальная сумма, которую я бы рекомендовал держать для оборотных средств на одном аккаунте около 5000-6000$.</p>
+				<p>В интернете есть много информации о том, сколько денег нужно, чтобы начать бизнес на Amazon. Важно понимать, что
+				вложения напрямую зависят от стратегий, по которым вы будете работать на Amazon. На Amazon есть легальные стратегии, а
+				есть стратегии, которые напрямую ведут ваш аккаунт к бану. На нелегальных стратегиях долгосрочный бизнес не построить.
+				Максимум вы проработаете пару месяцев и вас забанят навсегда. Поэтому, когда вы читаете в интернете, что бизнес на
+				Amazon можно начать и с 1000$ и никаких дополнительных вложений не потребуется, то будьте уверены, что это работа по
+				нелегальным стратегиям, и вы 100% гарантированно получите бан и ваш бизнес на Amazon закончится. Пожалуйста, подумайте
+				логически, какой бизнес в России вы можете начать на 1000$? Вариантов не так уж и много, если они вообще есть. Бизнес на
+				Amazon - это бизнес в США, где все цены гораздо дороже, поэтому ни о каких 1000$ на старт и речи идти не может, будьте
+				реалистами. Мы работаем на Amazon только по 100% легальным и безопасным стратегиям, которые исключают возможность бана
+				аккаунта. Поэтому в этой статье мы поговорим о том, какие вложения потребуются чтобы начать бизнес на Amazon, который
+				будет работать долгие годы.</p>
 
-				<p><span>Private Label</span> - т.к. в этой стратегии нужно самостоятельно делать листинг, продающие фото, брендинг, продвигать листинг, то вложения тут нужны побольше. Для комфортного старта я бы ориентировался на сумму от 5000$. Но при этом я бы держал в уме, что у меня должны быть средства на дозакупку товара, так же в размере 4000-4500$. Нужно это для того, чтобы когда вы уже выведите продажи на хороший уровень, вы могли быстро закупить товар и не оказаться в "аут оф сток" (потом вы уже сможете стабильно закупать товар с оборотных средств, но для первой дозакупки я бы держал данную сумму в уме). Итого, для комфортного старта я бы ориентировался ну сумму 8000-9000$. Минимальные вложения, которые необходимы для данной стратегии - от 5000$, максимума в данной стратегии просто нет, т.к. можно выбрать такие ниши, для запуска которых нужны сотни тысяч долларов.</p>
+				<p>Онлайн Арбитраж - для старта по данной стратегии для комфортного старта нужно ориентироваться на сумму 6-7 тысяч
+				долларов с учетом всех вложений и выше. Многие ошибочно думают, что все вложения в бизнесе на Amazon - это только товар
+				и доставка. На самом деле, если вы хотите работать легально и безопасно, то у вас появляется множество сопутствующих
+				расходов, например, чтобы получить разрешение легально торговать через чье-либо объявление. Когда вы запускаем магазины
+				под ключ по данной стратегии, то в стоимость наших услуг включено получение разрешений для легальной торговли через
+				объявления других продавцов. При этом если вы будете делать это самостоятельно, то, скорее всего, потратите еще больше
+				денег (важно понимать, что мы говорим именно о легальной работе). При этом минимальные вложения в товар по данной
+				стратегии - от 1500$, но чем больше ваши вложения именно в товар, тем больше ваша прибыль. Хороший товар дает от 50 до
+				120% чистой прибыли при распродаже партии товара, поэтому если у вас минимальный бюджет, то будьте готовы к тому, что
+				вам придется реинвестировать. Private Label - т.к. в этой стратегии нужно с нуля делать листинг, продающие фото,
+				брендинг, продвигать листинг, то для работы по данной стратегии нужно больше вложений. Для комфортного старта нужно
+				ориентироваться на сумму от 20000$ и это самый минимум. Не верьте сказкам, что можно запустить Private Label с
+				вложениями 3-5 тысяч долларов. Для работы по данной стратегии вам нужно как минимум 5000$ на рекламу, без этого вы не
+				запустите продажи. Так о каких 3-5 тысячах вложений может идти речь, если 5000$ минимум у вас уйдет на рекламу?</p>
 
-				<p>И, самое главное, помимо этих сумм и в ОА и в PL я бы держал на подушку безопасности на непредвиденные расходы в размере 10-20% от первоначальной суммы запуска. Это помогло бы чувствовать себя комфортно, и не переживать "хватит ли мне денег".</p>
+				<p>И, самое главное, помимо этих сумм при работе по любой из этих стратегий мы советуем держать подушку безопасности на
+				непредвиденные расходы в размере 10-20% от первоначальной суммы запуска. Это поможет вам чувствовать себя комфортно, и
+				не переживать за то, что вам может не хватить денег. Обязательно помните, что помимо всего вышеперечисленного вам могут
+				понадобится расходы на то, чтобы открыть "закрытые категории", если ваш товар будет в них попадать, а так же возможно
+				вам придется покупать отзывы, срочно дозакупать товар, и так далее, и всё это нужно держать в уме.</p>
 
-				<p>Так же нас часто спрашивают, можно ли взять кредит на запуск бизнеса на Amazon или это неоправданный риск? Наше мнение тут предельно простое: кредит на первый бизнес брать нельзя, т.к. если над вами будет висеть груз ответственности, что вот-вот уже надо отдавать деньги, то в таких обстоятельствах вы можете мыслить и действовать не рационально, что негативно повлияет на ваш бизнес. Если же вы берете в кредит сумму, которую вы легко и незаметно для своего кармана покроете из других стабильных источников дохода, то такой вариант имеет место быть, но решать только вам.</p>
+				<p>Так же нас часто спрашивают, можно ли взять кредит на запуск бизнеса на Amazon или это неоправданный риск? Наше мнение
+				тут предельно простое: кредит на первый бизнес брать нельзя (если у вас нет других бизнесов и других источников дохода,
+				чтобы гасить кредит), т.к. если над вами будет висеть груз ответственности, что вот-вот уже надо отдавать деньги, то в
+				таких обстоятельствах вы можете мыслить и действовать нерационально, что негативно повлияет на ваш бизнес. Так же нужно
+				учитывать, что, например, тот товар, который вы заказали, может продаваться хуже, чем вы планировали. Или же, что часто
+				бывает, Китайские производители задержат производство товара на пару недель. В этом случае вы так же не уложитесь в
+				сроки и не сможете выполнять кредитные обязательства. Поэтому пользуйтесь базовыми принципами финансовой грамотности в
+				принятии таких решений. Если же вы берете в кредит сумму, которую вы легко и незаметно для своего кармана покроете из
+				других стабильных источников дохода, то такой вариант имеет место быть, но решать только вам так, как любые финансовые
+				решения - это всегда ваша личная зона ответственности.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
