--- a/app/single-in-euro.html
+++ b/app/single-in-euro.html
@@ -76,7 +76,7 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>Сегодня поговорим об Европейском рынке Amazon. Обычно, когда говорят о продажах на Amazon, то подразумевают рынок США, т.к. в этой стране Amazon - это самая крутая площадка для продаж товаров через интернет, которая ежегодно забирает себе более 50% от всего рынка интернет-продаж и там крутятся миллиарды долларов. Европейский Amazon пока значительно уступает Amazon США, но у него есть серьезные перспективы, о которых мы хотим рассказать сейчас.</p>
+				<p>Сегодня поговорим об Европейском рынке Amazon. Обычно, когда говорят о продажах на Amazon, то подразумевают рынок США, т.к. в этой стране Amazon - это самая крупная площадка для продаж товаров через интернет, которая ежегодно забирает себе более 50% от всего рынка интернет-продаж и там крутятся миллиарды долларов. Европейский Amazon пока значительно уступает Amazon США, но у него есть серьезные перспективы, о которых мы хотим рассказать сейчас.</p>
 
 				<p>Не будем "грузить" вас лишней информацией, а просто расскажем про некоторые основные моменты. Европейский Amazon действует на территории 5 стран: Великобритания, Франция, Германия, Италия, Испания. И тут сразу в глаза бросается очевидное преимущество — когда Amazon начнет активнее продвигаться на территории других европейских стран, то те, кто торгует на европейском Amazon сейчас, будут в наиболее выигрышном положении и быстро захватят новые рынки, соберут хорошую прибыль вообще без конкуренции, легко станут топами на новых рынках.</p>
 
