--- a/app/single-learn.html
+++ b/app/single-learn.html
@@ -76,35 +76,74 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>Многие почему-то думают, что для того, чтобы начать бизнес на Amazon, нужно знать английский. Прямо большинство людей спрашивают у нас вопрос про язык. На самом же деле, знание английского усложняет ведение бизнеса на Amazon по моей субъективной оценке примерно на 0,001%. На самом же деле, чтобы вести бизнес на Amazon, обязательно понадобятся следующие навыки:</p>
+				<p>Многие новички в бизнесе на Amazon почему-то думают, что для того, чтобы начать бизнес на данной площадке, нужно знать
+				английский и это прямо основа данного бизнеса. Очень большое количество людей спрашивают у нас вопрос именно про
+				английский язык. На самом же деле, знание английского упрощает ведение бизнеса на Amazon по нашей субъективной оценке
+				примерно 1%. На самом же деле, чтобы вести бизнес на Amazon, обязательно понадобятся совсем другие навыки:</p>
 
 				<h2>1. Аналитика.</h2>
 
-				<p>Без аналитики в Амазоне никуда. Это база, на которой строится весь бизнес. Чтобы запустить бизнес на Амазон вам нужно будет научиться пользоваться сервисами аналитики, понимать данные, которые вы получаете с помощью этих сервисов, научиться делать выводы и уметь строить прогнозы на основе аналитики. Без этого в этом бизнесе вообще никуда. Так что, если вы хотите самостоятельно вести этот бизнес, то будьте готовы.</p>
+				<p>Без аналитики в бизнесе на Amazon никуда. Это база, на которой строится весь бизнес. Чтобы запустить бизнес на Amazon
+				вам нужно будет научиться пользоваться сервисами аналитики, вам нужно понимать данные, которые вы получаете с помощью
+				этих сервисов, вам нужно понимать, на что влияют те или иные показатели, вам нужно научиться делать выводы и уметь
+				строить прогнозы на основе данных аналитики. Без этого в этом бизнесе вообще никуда, и к сожалению, этому вас не научит
+				никто. Этот опыт вам может дать только практика. Так что, если вы хотите самостоятельно вести бизнес на Amazon, то
+				будьте готовы, что придется очень много учиться и практиковаться.</p>
 
 				<h2>2. Работа с Китаем и работа с поставщиками.</h2>
 
-				<p>Для работы по стратегии Private Label вам обязательно нужно будет научиться работать с Китаем. Нужно уметь искать надежных поставщиков, проверять их качество, вести переговоры, заказывать пробники, обсуждать заказ партии. В работе с Китаем есть много нюансов, от которых напрямую зависит качество вашего продукта.</p>
+				<p>Для работы на Amazon вам обязательно нужно будет научиться работать с Китаем и с китайскими поставщика. Конечно, вы
+				можете нанять себе в команду специалиста по Китаю, и если вы ведете бизнес на Amazon самостоятельно, то со временем это
+				обязательно придется сделать, но вам 100% нужно уметь искать надежных поставщиков, проверять их качество, вести
+				переговоры, заказывать пробники, обсуждать заказ партии и т.д. самостоятельно, иначе вас постоянно будут обманывать в
+				Китае и вы прогорите. В работе с Китаем есть много нюансов, от которых напрямую зависит качество вашего продукта и ваша
+				прибыль.</p>
 
-				<p>Если же вы работаете по стратегии Онлайн Арбитраж, то вам придется научиться общаться с американскими поставщиками, научиться правильно оформлять заказы, правильно вести общение.</p>
+				<p>Для успешной работы на Amazon работа с Китаем очень важна. Вам обязательно нужны подрядчики для проверки партий заказа,
+				вам обязательно нужно получить опыт общения с заводами. Нюансов действительно очень много, и без профессиональной работы
+				с Китаем в бизнесе на Amazon совсем никак.</p>
 
 				<h2>3. Логистика.</h2>
 
-				<p>Вам обязательно придется разобраться с логистикой и доставкой товара от поставщика на склад Amazon. Так же нужно разобраться с хранением товара (для Private Label). От оптимизации логистики будет напрямую зависеть ваша прибыль.</p>
+				<p>Вам обязательно придется разобраться с логистикой и доставкой товара от поставщика на склады Amazon. Так же нужно
+				разобраться с хранением товара, с правильной упаковкой, с правильной сортировкой товара. Вам нужно правильно проходить
+				таможню. Вам нужно разбираться во всех нюансах логистики. От оптимизации логистики будет напрямую зависеть ваша прибыль
+				в бизнесе на Amazon. Если вы ведете бизнес на Amazon самостоятельно, то будьте готовы к тому, что вам придется нанимать
+				себе в команду специалиста по логистике, потому что если у вас нет опыта в данном вопросе, то справиться будет тяжело.</p>
 
 				<h2>4. Маркетинг.</h2>
 
-				<p>Этот пункт для стратегии Private Label. Под маркетингом в Amazon я понимаю создание листинга, который будет качественно сделан, продающие фотографии (чтобы они действительно продавали, а не отпугивали людей от покупки), создание продающего дизайна, продающие отзывы, которые закрывают возможные возражения людей, и т.д. Вам важно будет понимать аудиторию, которой вы будете продавать свой продукт, и важно соответствовать ожиданиям этой аудитории.</p>
+				<p>Под маркетингом в Amazon мы понимаем создание маркетинговых инструментов, а именно: листинга, который будет качественно
+				сделан; продающих фотографий (чтобы они действительно продавали, а не отпугивали людей от покупки); продающего дизайна;
+				продающих отзывов, которые закрывают возможные возражения людей, и т.д. Вам важно будет понимать аудиторию, которой вы
+				будете продавать свой продукт, и важно соответствовать ожиданиям этой аудитории. Так же под маркетингом мы понимаем
+				создание продукта. Многие "эксперты" (к кавычках) по Amazon рассказывают о том, что можно купить очень дешевый продукт в
+				Китае, и продать его втридорога на Amazon. Это в корне неверно. Продукт должен быть очень качественным, иначе вы просто
+				получите негативные отзывы и у вас никто не будет покупать. Чтобы сделать качественный продукт, нужно понять все
+				проблемы рынка, изучить все о выбранном продукте, и сделать продукт лучше, чем у конкурентов. Поэтому, вы так же должны
+				уметь делать маркетинговый анализ, чтобы ваш продукт подходил именно вашей целевой аудитории.</p>
 
 				<h2>5. Реклама.</h2>
 
-				<p>Этот пункт так же только для стратегии Private Label. Самый важный пункт, на ряду с аналитикой, это реклама. Может конечно это неправильно, но я решил разделить понятие маркетинг и реклама, маркетинг в данном посте - это больше про "упаковку" вашего продукта, повышение конверсии в продажу, а реклама - это продвижение товара. Разделил эти понятия только для удобства понимания. Для того чтобы зарабатывать на Amazon вам нужно уметь продвигать свои товары, выводить их в топ, и тут очень важно разобраться в рекламе на Amazon. Если вы разбираетесь в контекстной рекламе Яндекс или Гугл, то эти знания вам наверняка помогут.</p>
+				<p>Один из важнейших пунктов - это реклама. Может, конечно, это не совсем правильно, но мы решили разделить понятия
+				маркетинг и реклама. Реклама в нашем понимании - это продвижение товара. Вы должны понимать, как продвинуть ваш продукт,
+				и какие технологии использовать для того, чтобы ваш продукт покупали. Для того чтобы зарабатывать на Amazon вам нужно
+				уметь продвигать свои товары, выводить их в топ, и тут очень важно разобраться в рекламе на Amazon. Если вы разбираетесь
+				в контекстной рекламе Яндекс или Google, то эти знания вам наверняка помогут, но рынок рекламы в Amazon имеет огромное
+				количество своих собственных нюансов, в которых нужно разбираться. Реклама - это бесконечный простор для роста, и для
+				успеха в бизнесе на Amazon нужно всегда развивать свои рекламные навыки.</p>
 
 				<h2>6. Управление.</h2>
 
-				<p>Ну и конечно же для ведения бизнеса на Amazon нужно уметь управлять бизнесом. Контролировать показатели, контролировать отзывы, своевременно добавлять отзывы, своевременно закупать товар, управлять бюджетом, и др.</p>
+				<p>Ну и конечно же для ведения бизнеса на Amazon нужно уметь управлять бизнесом. Вы должны уметь контролировать показатели,
+				контролировать отзывы, своевременно добавлять отзывы, своевременно закупать товар, управлять бюджетом, и др. Вы должны
+				понимать, как развивать этот бизнес. Вы должны понимать, с какой скоростью развивать бизнес, вы должны развиваться
+				пошагово.</p>
 
-				<h2>Как вы видите, при работе по стратегии Private Label, вам придется научиться гораздо большему количеству вещей, поэтому если вы не готовы 100% своего времени уделять бизнесу на Amazon, то рекомендуем начать бизнес на Amazon со стратегии Онлайн Арбитраж.</h2>
+				<h2>Как вы видите, для работы на Amazon нужно огромное количество разносторонних знаний, и английский язык это самая
+				незначительная проблема, которая есть в этом бизнесе. Если вы хотите вести бизнес на Amazon самостоятельно, то будьте
+				готовы к тому, что вам на 100% придется погрузиться в этот бизнес, иначе вы просто напросто окажитесь в минусе, и не
+				сможете выдержать конкуренцию.</h2>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
