--- a/app/single-lottery.html
+++ b/app/single-lottery.html
@@ -95,7 +95,16 @@
 
 				<p>Вы можете знать, сколько зарабатывает компания, которая находится на 3 месте в Яндексе по запросу "купить одеяло"? Вы можете знать, сколько у них клиентов в месяц? Нет, максимум вы узнаете, сколько у них посетителей в месяц на сайте. Все остальные данные загадка. В бизнесе на Amazon вы можете узнать про любого конкурента практически всё.</p>
 
-				<p>Поэтому, если вы умеете пользоваться аналитикой, то Amazon для вас будет 100% прогнозируемым бизнесом. Ну а если вы ничего не понимаете и не хотите ни в чем разбираться, то любой бизнес для вас будет лотереей, в которую вы скорее всего никогда не выиграете.</p>
+				<p>Поэтому, если вы умеете пользоваться аналитикой, то Amazon для вас будет 100% прогнозируемым бизнесом. Ну а если вы
+				ничего не понимаете и не хотите ни в чем разбираться, то любой бизнес для вас будет лотереей, в которую вы скорее всего
+				никогда не выиграете. Вы можете задать логичный вопрос: если в Amazon всё так прекрасно, то почему тогда не все продавцы
+				на Amazon миллионеры? Конечно, не смотря на аналитику, на Amazon есть свои риски. В чем они заключаются? Например,
+				сегодня вы выбрали 100% подходящий для продажи товар. Завтра вы заказываете этот товар в Китае. В среднем товар
+				изготавливается 3 недели, ещё 3 недели на доставку в США, и 1-2 недели на сортировку товара и приемку товара на Amazon.
+				За это время, пока товар изготавливается и доставляется, на рынке могут произойти изменения. Например, может усилиться
+				конкуренция, или понизиться спрос, или упадут цены. Исключать этого нельзя, даже не смотря на то, что в Amazon вы можете
+				посмотреть, как изменяется ниша с течением предыдущего времени. Поэтому, хоть результат на Amazon и можно
+				прогнозировать, но риски исключать нельзя и их стоит учитывать.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
