--- a/app/single-mistakes.html
+++ b/app/single-mistakes.html
@@ -88,25 +88,26 @@
 
 				<h2>2 ошибка - Запускать продукт, который стоит очень дёшево стоит (5-12$).</h2>
 
-				<p>Важно найти продукт, который вы будет продавать более чем за 15$. Вы можете найти продукт который будет стоить копейки, но не забывайте о налогах Амазон которые будут сжирать всю вашу прибыль, а на товары цена которых менее 12$ Амазон взимает налог около 50%.</p>
+				<p>Важно найти продукт, который вы будет продавать более чем за 15$, а лучше вообще дороже 25$. Вы можете найти продукт который будет стоить копейки, но не забывайте о налогах Амазон которые будут сжирать всю вашу прибыль, а на товары цена которых менее 12$ Амазон взимает налог около 50%.</p>
 
-				<p>Эту ошибку мы так же допустили на одном из своих первых продуктов (чехлы для телефонов). Я конечно же не могу сказать что это прям табу, не запускать товары по цене ниже 12$, ведь в конечном итоге все зависит от вас и от ваших умений грамотно распоряжаться бюджетом. Но сейчас мы рассматриваем для себя товары только стоимость от 15$ и выше, берем всегда с запасом.</p>
+				<p>Эту ошибку мы так же допустили на одном из своих первых продуктов (чехлы для телефонов). Я конечно же не могу сказать что это прям табу, не запускать товары по цене ниже 12$, ведь в конечном итоге все зависит от вас и от ваших умений грамотно распоряжаться бюджетом. Но сейчас мы рассматриваем для себя товары только стоимость от 25$ и выше, берем всегда с запасом.</p>
 
 				<p>В рекламе Амазон есть такой показатель как ACoS. Перед запуском продаж на Амазон важно изучить этот показатель. Если цена вашего продукта на Амазон меньше 12$, то комиссии Амазона сожрут около 50% от цены товара, что соответственно сильно урежет вашу маржу и не даст вам полноценно продвигать ваш товар. Как раз в подобной ситуации оказались мы со своими чехлами.</p>
 
-				<p>Хотя наше предложение и состояло из комплекта чехлов, конкурентная цена на подобное предложение была не выше 12$ и мой допустимый ACoS был в районе 5-10%, что естественно меня сильно ограничивало и любая ошибка выкидывала меня в минус.</p>
+				<p>Хотя наше предложение и состояло из комплекта чехлов, конкурентная цена на подобное предложение была не выше 12$ и наш допустимый ACoS был в районе 5-10%, что естественно меня сильно ограничивало и любая ошибка выкидывала меня в минус.</p>
 
 				<h2>3 ошибка - Общаться с поставщиками не в деловом формате.</h2>
 
 				<p>Это очень серьёзная ошибка! При работе на Амазон мы её не допускали, т.к. у нас огромный опыт в Китае и мы знаем наверное все нюансы общения с поставщиками, но мы знаем многих ребят, которые теряли десятки тысяч долларов из-за неправильного общения с поставщикам.</p>
 
-				<p>Написание письма в бизнес формате как от делового лица в разы повысит лояльность вашего поставщика. Вы не только сможете рассчитывать на выгодную цену, но и на возможность получить бесплатные образцы для тестирования и фотосета вашего продукта. Будьте профессионалами, не давайте вашим поставщикам думать что вы "Вася" которого можно просто проигнорировать или кинуть и подсунуть некачественный товар.</p>
+				<p>Написание письма в бизнес формате как от делового лица в разы повысит лояльность вашего поставщика. Вы не только сможете рассчитывать на выгодную цену, но и на возможность получить бесплатные образцы для тестирования и фотосета вашего продукта. Будьте профессионалами, не давайте вашим поставщикам думать что вы новичок, которого можно просто проигнорировать или
+				кинуть и подсунуть некачественный товар.</p>
 
 				<h2>БОНУС: 4 ошибка - некачественные отзывы.</h2>
 
 				<p>Когда вы заходите на Амазон - вам нужны отзывы о вашем продукте, иначе продаж у вас будет ровно 0. Отзывы можно заказать, но делать это стоит очень аккуратно. Например, около года назад продажи одного нашего товара резко упали, из-за того, что Амазон удалил очень старые отзывы.</p>
 
-				<p>Мы запустили продажу этого товара 2 года назад, заказали отзывы (не верифицированные и верифицированные 50/50), и сделали нам их некачественно. Из-за этого около года назад (прошел уже почти год после написания отзывов) Амазон удалил почти все наши отзывы с этого товара (даже те, которые были верифицированные и которые оставили мои реальные клиенты за год работы), было более 100 отзывов, а осталось 9. Продажи этого товара резко упали. После этого мы 2 недели изучали тему отзывов на Амазон на одном американском тренинге.</p>
+				<p>Мы запустили продажу этого товара 2 года назад, заказали отзывы (не верифицированные и верифицированные 50/50), и сделали нам их некачественно. Из-за этого около года назад (прошел уже почти год после написания отзывов) Амазон удалил почти все наши отзывы с этого товара (даже те, которые были верифицированные и которые оставили наши реальные клиенты за год работы), было более 100 отзывов, а осталось 9. Продажи этого товара резко упали. После этого мы 2 недели изучали тему отзывов на Амазон на одном американском тренинге.</p>
 
 				<blockquote>P.S. Допускать ошибки - это всегда хорошо, но гораздо лучше, когда вы заранее знаете о всех ошибках и можете их избежать без потерь для себя. Все эти ошибки мы допускали в первые полгода работы на Amazon, и это очень обидно, когда из-за какой-то нелепой ошибки теряется большая часть всех денег, которые у вас есть. <br><br>Сейчас мы делимся этими ошибками с вами именно потому, что мы сами были бы рады, если бы несколько лет назад с нами кто-то бы поделился этой информацией, но тогда мы считали себя "самыми умными", и уже думали что полностью разобрались в Amazon, но на самом деле нюансов действительно много, и прежде чем заходить на Amazon нужно всё детально изучить.</blockquote>
 
