--- a/app/single-myths.html
+++ b/app/single-myths.html
@@ -84,9 +84,18 @@
 
 				<h2>Миф №2. На Amazon сложно заработать, лишь немногие получают прибыль.</h2>
 
-				<p>Начнем с вопроса в адрес тех, кто имеет такое мнение. Если вам кажется, что тяжело заработать на площадке, на которой происходит больше всего продаж в мире, то где же вам тогда легко заработать? Поймать рыбу в озере, где плавает тонны рыбы гораздо легче, чем поймать рыбу в речке, где плавает одна рыбешка.</p>
+				<p>Тут всё зависит от вашего подхода. Если вы готовы стать профессионалом в Amazon, если вы готовы 24/7 развиваться и
+				улучшать свои навыки в этом бизнесе, то вы будете зарабатывать. Если же вы думаете, что бизнес на Amazon очень просто и
+				у вас без знаний и опыта всё легко получится, то конечно, с таким подходом вас ждет разочарование. На Amazon делается
+				около 30 000 000 продаж в день. Если вы будете делать 10 продаж в день с прибылью в 10 долларов, то вы уже будете
+				зарабатывать от 3000$ в месяц и это вполне реально.</p>
 
-				<p>Для того, чтобы зарабатывать на Amazon нужно уметь анализировать показатели и правильно выбирать товар. На Amazon много долларовых миллионеров, каждый 10й продавец зарабатывает более 100 000 $ в месяц. И при этом некоторые диванные эксперты говорят, что на Amazon трудно заработать. Конечно, если вы покупаете товар по 10$ в Китае и хотите продавать его за 15$ на Amazon, при учете, что вы не делали аналитику и не считая того, что всю маржу съест комиссия на Amazon, то заработать действительно очень сложно, но если напрячь мозги, тщательно подумать, и принимать взвешенные решения, то заработать будет гораздо легче.</p>
+				<p>Но нужно понимать, что для того, чтобы зарабатывать на Amazon нужно уметь анализировать показатели и правильно выбирать
+				товар. На Amazon много долларовых миллионеров, каждый 10й продавец зарабатывает более 100 000 $ в месяц. При этом надо
+				понимать, что для того, чтобы заработать на Amazon нужно усердно работать и развиваться. Конечно, если вы покупаете
+				товар по 10$ в Китае и хотите продавать его за 15$ на Amazon, при учете, что вы не делали аналитику и не считая того,
+				что всю маржу съест комиссия на Amazon, то заработать действительно очень сложно, но если напрячь мозги, тщательно
+				подумать, и принимать взвешенные решения, то заработать будет гораздо легче.</p>
 
 				<h2>Миф №3. Чтобы зарабатывать на Amazon нужно знать английский язык.</h2>
 
@@ -94,7 +103,8 @@
 
 				<h2>Миф №4. К Россиянам на Amazon относятся негативно!</h2>
 
-				<p>Этот миф очень распространен среди любителей посмотреть телевизор, особенно программы про то, как в США всё ужасно и как загнивает запад. На Amazon всем абсолютно всё равно, откуда вы. Да, вам надо подстроится под американские стандарты, и подготовить документы для регистрации в том формате, в котором просит Amazon. Но это не значит, что к вам относятся негативно, это значит, что вы должны играть по их правилам. Более того, США - это та страна, в которой массу крутых вещей сделали именно приезжие из других стран, поэтому там ко всем относятся одинаково.</p>
+				<p>Этот миф очень распространен среди любителей посмотреть телевизор, особенно программы про то, как в США всё ужасно и как загнивает запад. На Amazon всем абсолютно всё равно, откуда вы. Да, вам надо подстроится под американские стандарты, и подготовить документы для регистрации в том формате, в котором просит Amazon. Но это не значит, что к вам относятся негативно, это значит, что вы должны играть по их правилам. Более того, США - это та страна, в которой массу крутых вещей сделали именно приезжие из других стран, поэтому там ко всем относятся одинаково. Более того, в октябре 2020 года модерация Amazon добавила русский язык в список поддерживаемых языков. Если бы к русским
+				относились негативно, то вряд ли бы это произошло.</p>
 
 				<h2>Миф №5. Чтобы заработать на Amazon нужно много вложений.</h2>
 
