--- a/app/single-payoneer.html
+++ b/app/single-payoneer.html
@@ -84,7 +84,12 @@
 
 				<p>Как снять деньги с самого Payoneer? При регистрации в Payoneer вы привязываете счёт любой своей дебетовой карты, который будет связан с Payoneer. На эту карту вы сможете выводить свою чистую прибыль с комиссией 1-2%, а напрямую со счёта Пионер вы сможете расплачиваться со своим поставщиком.</p>
 
-				<p>Так же вы можете получить карту Payoneer на руки и можете расплачиваться ей как и любой обычной картой в магазинах, а так же можете снимать деньги в банкоматах.</p>
+				<p>Многих интересует вопрос, можно ли вести бизнес на Amazon легально, платить налоги и быть ни за что не переживать.
+				Конечно, вы можете выводить свою прибыль со счета пионер на свою дебетовую карту, и декларировать эту прибыль как ИП,
+				оплачивая 6%. В этом вам поможет любой бухгалтер. Делать это стоит тогда, когда вы уже вышли на хорошие обороты в
+				бизнесе на Amazon. При этом, важно понимать, что вы можете декларировать только свою чистую прибыль, которую вы выводите
+				себе на карту. Те денежные средства, которые у вас остаются на счете Пионер, и с помощью которых вы расплачиваетесь с
+				поставщиками, декларировать не обязательно.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
