--- a/app/single-product-sells.html
+++ b/app/single-product-sells.html
@@ -80,11 +80,16 @@
 
 				<h2>Онлайн Арбитраж</h2>
 
-				<p>В случае со стратегией Онлайн Арбитраж этот риск практически никак на вас не влияет. При работе по этой стратегии вы закупаете разные продукты по 20-30 единиц каждого. То есть, на один продукт вы тратите до 100-150$. Если ваш продукт будет продаваться очень плохо, например, 1 раз в неделю, то вы в любом случае за 2-3 месяца выйдете в плюс по этом продукту. Да, другие продукты при этом у вас будут разлетаться гораздо быстрее, но ничего страшного в этом нет, т.к. во-первых на один продукт приходится очень маленькая сумма вложений, а во-вторых даже если скорость продаж у какого-то продукта будет маленькой, то в конечном итоге вы всё равно заработаете с распродажи этого продукта.</p>
+				<p>В случае со стратегией Онлайн Арбитраж этот риск практически никак на вас не влияет. При работе по этой стратегии вы
+				закупаете разные продукты по 20-30 единиц каждого. То есть, на один продукт вы тратите до 100-150$. Если ваш продукт
+				будет продаваться очень плохо, например, 1 раз в неделю, то вы в любом случае за 2-3 месяца выйдете в плюс по этом
+				продукту. Да, другие продукты при этом у вас будут разлетаться гораздо быстрее, но ничего страшного в этом нет, т.к.
+				во-первых на один продукт приходится очень маленькая сумма вложений, а во-вторых даже если скорость продаж у какого-то
+				продукта будет маленькой, то в конечном итоге вы всё равно заработаете с распродажи этого продукта. Если товар не продается от слова "совсем", то в этом случае вы можете запустить рекламу на свой товар, и продать его быстрее, но с меньшей выгодной или в небольшой минус, чтобы не платить за хранение товара.</p>
 
 				<h2>Private Label</h2>
 
-				<p>При работе по данной стратегии нужно заранее просчитывать риски, т.к. вы запускаете один продукт, и под этот продукт создаете продающие материалы, фотографии, настраиваете рекламу, и если продукт не заходит и плохо продается, то с медленной распродажи товара вы конечно можете отбить вложения в сам товар или хотя бы часть вложений в товар, но вот вложения на продающие материалы при плохих продажах вы вряд ли покроете. Поэтому, при работе по стратегии Private Label, самым главным является точный выбор товара. Как только вы выбрали товар, нужно протестировать его с минимальными вложениями, а именно купить самую минимальную партию товара, сделать продающие материалы своими руками, и потратить минимальное количество денег на запуск. Далее, уже по результатам распродажи мелкой партии товара, вы получите либо готовый к продаже товар, который можно продавать без риска, либо вы сможете искать дальнейший товар для теста.</p>
+				<p>При работе по данной стратегии нужно заранее просчитывать риски, т.к. вы запускаете один продукт, и под этот продукт создаете продающие материалы, фотографии, настраиваете рекламу, и если продукт не заходит и плохо продается, то с медленной распродажи товара вы конечно можете отбить вложения в сам товар или хотя бы часть вложений в товар, но вот вложения на продающие материалы при плохих продажах вы вряд ли покроете. Поэтому, при работе по стратегии Private Label, самым главным является точный выбор товара. Как только вы выбрали товар, нужно протестировать его с минимальными вложениями, а именно купить самую минимальную партию товара, и потратить минимальное количество денег на запуск. Далее, уже по результатам распродажи мелкой партии товара, вы получите либо готовый к продаже товар, который можно продавать без риска, либо вы сможете искать дальнейший товар для теста.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
