--- a/app/single-programs.html
+++ b/app/single-programs.html
@@ -78,9 +78,11 @@
 				
 				<img class="img-responsive" src="img/programs-img.jpg" alt="">
 
-				<!-- <h2>Payoneer</h2> -->
-
-				<p>Одно из ключевых преимуществ бизнеса на Amazon, по сравнению с другими направлениями бизнеса (по крайней мере по сравнению с теми, которыми занимался я раньше) - это то, что данное направление бизнеса на 100% основано на аналитике и то, что данный бизнес можно полностью автоматизировать. Ну и соответственно для этого нужны сервисы и программы, которые будут помогать нам. Сегодня хочу поделиться с вами несколькими программами:</p>
+				<p>Ключевые преимущества бизнеса на Amazon состоят в том, что бизнес на Amazon на 100% основан на аналитике. В бизнесе на
+				Amazon вы можете спрогнозировать, как пойдут продажи вашего товара за счет специальных программ. Соответственно, если вы
+				умеете пользоваться аналитикой, вы сразу понимаете, будет ли ваш продукт хорошо продаваться. Так же данный бизнес можно
+				практически полностью автоматизировать. Для этого нужны сервисы и программы, которые будут помогать нам. Сегодня мы
+				расскажем вам о 5 сервисах, которые помогут вам в работе с Amazon:</p>
 
 				<p>Jungle Scout - плагин, который позволяет оценить конкуренцию в нише, понять спрос, оценить обороты продавцов в выбранной нише. Данная программа позволяет оценить, стоить ли заходить в выбранную нишу или нет. Программа показывает следующие параметры по выбранным конкурентам: средняя цена по нише, среднее количество отзывов, какой спрос.</p>
 
