--- a/app/single-promotion.html
+++ b/app/single-promotion.html
@@ -76,11 +76,22 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>Давайте поговорим о самом основном в бизнесе на Amazon, а именно о продвижение и продаже вашего товара. Начнем с того, что любой потенциальные клиент видит всего 3 вещи, когда заходит к вам на листинг: описание продукта, ваши фото, отзывы. Именно по этим 3 параметрам клиент выбирает, купить товар у вас или у вашего конкурента.</p>
+				<p>Давайте поговорим об одном из самых основных составляющих успеха в бизнесе на Amazon, а именно о продвижение и продаже
+				вашего товара. Вы можете качественно выбрать товар на основе аналитики, но если вы не знаете, как его продвигать, то вы
+				не будете хорошо зарабатывать. Начнем с того, что любой потенциальные клиент видит всего 3 вещи, когда заходит к вам на
+				листинг: описание продукта, ваши фотографии, и отзывы. Именно по этим 3 параметрам клиент выбирает, купить товар у вас
+				или у вашего конкурента.</p>
 
-				<p>Так вот, если эти 3 пункта на уровне, то ваши продажи будут «бомба». С фотографиями и с описанием все понятно: делаешь, анализируешь как работает, меняешь, улучшаешь, экспериментируешь, и находишь идеальное сочетание. Других рецептов тут нет, как и в любом маркетинговом инструменте - нужно тестировать. Чтобы отзывы не смущали потенциальных клиентов, нужно держать рейтинг отзывов выше 4,5 звезд, это идеальное значение. Как делать отзывы мы уже писали в других постах ранее, поэтому переходим к рекламе.</p>
+				<p>Так вот, если эти 3 пункта реализованы на качественном уровне, то ваши продажи будут идти отлично. С фотографиями и с
+				описанием товара вроде все понятно: делаешь, анализируешь как работает, меняешь, улучшаешь, экспериментируешь, и
+				находишь идеальное сочетание. Других рецептов успеха тут нет, как и в любом маркетинговом инструменте - нужно
+				тестировать и сравнивать показатели. Чтобы отзывы не смущали потенциальных клиентов, нужно держать рейтинг отзывов выше
+				4,5 звезд, это идеальное значение. Как делать отзывы мы уже писали в других статьях ранее, поэтому переходим к рекламе.</p>
 
-				<p>Рассказать всё о рекламе в одном посте просто невозможно, поэтому сегодня дам лишь маленькую часть базовой информации. Первое, что нужно понимать - когда вы только выбираете товар для продажи на Amazon, нужно ориентироваться не только на общие правила выбора товара, нужно понимать, как вы будете рекламировать этот товар. Вы можете выбрать крутой товар для продажи, но если вы не понимаете как его продвигать, то вы не добьетесь успеха.</p>
+				<p>Рассказать всё о рекламе в одной статье просто невозможно, поэтому сегодня мы дадим вам лишь маленькую часть базовой
+				информации. Первое, что нужно понимать - когда вы только выбираете товар для продажи на Amazon, вам нужно
+				ориентироваться не только на общие правила выбора товара, нужно понимать, как вы будете рекламировать этот товар. Вы
+				можете выбрать отличный товар для продажи, но если вы не понимаете как его продвигать, то вы не добьетесь успеха.</p>
 
 				<p>На Amazon есть внутренняя PPC-реклама (реклама с оплатой за клик). Это так называемый аналог Яндекс.Директ и Google Adwords. Именно через эту рекламу мы продвигаем товары, и раскачиваем их до тех пор, пока они не выйдут в топ органического поиска (верхние бесплатные позиции в поисковой выдаче).</p>
 
