--- a/app/single-registration-2.html
+++ b/app/single-registration-2.html
@@ -78,9 +78,14 @@
 
 				<p>Мы собрали список самых часто задаваемых вопросов про регистрацию на Amazon, и в этом посте мы постараемся дать ответы на эти вопросы.</p>
 
-				<h2>1. Почему нужна именно кредитная карта?! Можно ли обойтись только дебетовой картой?!</h2>
+				<h2>1. Почему для регистрации нужна именно кредитная карта?! Можно ли обойтись только дебетовой картой?!</h2>
 
-				<p>Это самый базовый момент. В США абсолютное большинство людей пользуются кредитными картами, а не дебетовыми, поэтому и для регистрации на Amazon вам в любом случае нужна именно кредитная карта. Дебетовую карту использовать нельзя. Что делать если нет кредитки? Очевидный ответ: оформить. Других вариантов нет.</p>
+				<p>Этот вопрос волнует многих, ведь в России лишь малый процент людей пользуются кредитными картами. При этом в США
+				абсолютное большинство людей пользуются кредитными картами, а не дебетовыми, поэтому и для регистрации на Amazon вам в
+				любом случае нужна именно кредитная карта, потому что алгоритмы оплаты в Amazon подстроены под кредитные карты.
+				Кредитная карту вы используете для того, чтобы оплачивать в Amazon ежемесячное обслуживание и рекламу на первом этапе.
+				Дебетовую карту для этих целей использовать нельзя, т.к. Amazon просто не сможет снять с вас оплату при регистрации и
+				ваш аккаунт заблокируют. Что делать, если у вас нет кредитки? Очевидный ответ: оформить. Других вариантов нет.</p>
 
 				<h2>2. Проверьте, чтобы по карте были разрешены операции без подтверждения.</h2>
 
@@ -92,7 +97,11 @@
 
 				<p>Так же иногда бывает, что вы отправили нужные документы несколько раз, а Amazon присылает вам пиьмо, что ему нужен документы в котором содержаться данные, которые уже есть в вашем документе. Такое бывает из-за невнимательности модераторов. В этом случае рекомендуем обвести в фотошопе красным цветом все нужные для Амазона данные в документе, и еще раз отправить документ на проверку.</p>
 
-				<p>Кстати, несколько раз в нашей практике, когда Amazon писал, что не может проверить подлинность выписки с кредитной карты, мы сканировали саму карту с лицевой стороны, и отправляли на Амазон скан самой карты и выписку, и несколько раз это срабатывало.</p>
+				<p>Кстати, несколько раз в нашей практике, когда Amazon писал, что не может проверить подлинность выписки с кредитной
+				карты, мы сканировали саму карту с лицевой стороны, и отправляли на Амазон скан самой карты и выписку, и несколько раз
+				это срабатывало. Но иногда бывает и такое, что Amazon отклоняет правильные документы, и аккаунт не открывают. В этом
+				случае мы покупаем своим клиентам готовый аккаунт для продаж на Amazon. Вы можете работать с покупным аккаунтом как на
+				постоянной основе, так и временно. При этом, через 90 дней вы сможете заново пройти регистрацию.</p>
 
 				<h2>4. Что делать, если документы всё еще не принимают после многих попыток отправки?!</h2>
 
@@ -112,15 +121,24 @@
 
 				<h2>5. Что делать, если я не нахожу Россию в списке стран для регистрации?!</h2>
 
-				<p>Если у вас возникла такая проблема, то обязательно прочитайте данный пост Вконтакте: <a href="https://vk.com/wall-107753250_5426" target="blank">vk.com/wall-107753250_5426</a>. В неё подробно рассказывается, как найти Россию в списке стран.</p>
+				<p>Если у вас возникла такая проблема, то обязательно прочитайте данный пост Вконтакте: <a href="https://vk.com/wall-107753250_5426" target="blank">vk.com/wall-107753250_5426</a>. В нём
+				подробно рассказывается, как найти Россию в списке стран. Кстати, в октябре 2020 года Amazon добавил русский язык в
+				список поддерживаемых модерацией языков.</p>
 
 				<img src="img/blog/single-registration-img-1.jpg" alt="image" class="img-responsive">
 
-				<h2>6. Сколько времени сейчас занимает регистрация?!</h2>
+				<h2>6. Сколько времени занимает регистрация на Amazon в качестве продавца?!</h2>
 
-				<p>Сейчас, как и всегда, регистрация на Amazon занимает у разных людей разное количество времени, зависит это от того, на какого модератора вы попадёте и как вам повезет. Кто-то проходит регистрацию за 3-5 дней и получают полностью верифицированный аккаунт, а у некоторых регистрация занимает пару месяцев. И тот и тот срок является абсолютно нормальным для Amazon и с этим ничего невозможно сделать.</p>
+				<p>Регистрация на Amazon может занимать разное количество времени у разных людей. Зависит это от того, на какого модератора
+				вы попадёте и как вам повезет. Кто-то проходит регистрацию за 3-5 дней и получают полностью верифицированный аккаунт
+				готовый к работе, а у некоторых регистрация занимает и пару месяцев. И тот и тот срок является абсолютно нормальным для
+				Amazon и с этим ничего невозможно сделать.</p>
 
-				<p>Кстати, в период рождественских продаж с сентября по декабрь сроки регистрации всегда увеличиваются, т.к. перед рождеством желающих торговать на Амазон всегда становится намного больше.</p>
+				<p>Кстати, в период рождественских продаж с сентября по декабрь сроки регистрации всегда увеличиваются, т.к. перед
+				рождеством желающих торговать на Амазон всегда становится намного больше. Так же нужно понимать, что Amazon открывает
+				аккаунты для продаж не всем. У Amazon есть ограничения на количество новых продавцов, поэтому, даже если у вас абсолютно
+				правильные документы и вы прошли регистрацию идеально, вам могут не открыть аккаунт для продаж. В этом случае вам
+				придется работать с покупным аккаунтом.</p>
 
 				<h2>7. Совершите покупку на Amazon до начала регистрации.</h2>
 
