--- a/app/single-time.html
+++ b/app/single-time.html
@@ -76,31 +76,80 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>У нас часто спрашивают, много ли времени нужно уделять бизнесу на Amazon. Нужно ли постоянно сидеть за компьютером и что-то делать или можно запустить бизнес и всё автоматизировать? Сегодня постараемся подробно разобрать этот вопрос.</p>
+				<p>У нас часто спрашивают, много ли времени нужно уделять бизнесу на Amazon. Нужно ли постоянно быть вовлеченным в процесс
+				работы или можно запустить бизнес на Amazon и всё автоматизировать? Сегодня постараемся подробно разобрать этот вопрос.</p>
 
-				<p>Скажем сразу, по сравнению с любым традиционным офлайн или онлайн бизнесом (особенно по сравнению с офлайн бизнесом, т.к. чтобы он работал, то первые пару лет вам придется уделять чуть ли не 24/7 своего времени бизнесу), бизнес на Amazon занимает в разы меньше времени, но поработать всё равно придется, особенно усердно и время-затратно на начальном этапе при запуске продукта, ведь Amazon это не волшебная кнопка "БАБЛО", а абсолютно точно такой же бизнес, как и любой другой.</p>
+				<p>Скажем сразу, по сравнению с большинством традиционных бизнесов, бизнес на Amazon занимает меньше времени, т.к. Amazon
+				берет на себя многие рутинные процессы, например, доставку и хранение товара, прием оплат, и т.д., поэтому часть времени
+				на этом вы экономите, но если вы хотите запустить бизнес на Amazon самостоятельно, то работать всё равно придется очень
+				много.</p>
 
-				<p>Так вот, начнем. Самое большое количество времени вы тратите на старте бизнеса, когда вам нужно подготовить всё для запуска продаж:</p>
+				<p>Для начала обозначим ключевую мысль: для успешного ведения бизнеса на Amazon вам 100% понадобится команда. Автоматизация
+				в бизнесе на Amazon зависит от того, какая у вас будет команда, и время, которое вы будете тратить на бизнес, будет так
+				же зависеть от вашей команды. Если вы считаете, что вы справитесь со всем самостоятельно, то у вас будут уходить как
+				минимум все 24 часа в сутки, чтобы развивать бизнес на Amazon, и не факт, что вы все успеете. А главное, сможете ли вы
+				качественно организовать работу, если у вас нет опыта во всех процессах? Например, вам нужно найти поставщика в Китае и
+				найти самый выгодный и безопасный вариант доставки. Понятно, что специалист по логистике справится с этой задачей
+				гораздо быстрее, поэтому вам обязательно нужен будет такой специалист. Или, например, вам нужно раскрутить продукт с
+				помощью PPC-рекламы на Amazon. Сколько у вас займет времени этот процесс, если вы сейчас даже не представляете, что
+				такое PPC-реклама, а ваши конкуренты – это продавцы на Amazon, которые варятся в этой рекламе 5-10 лет, а то и больше?</p>
+
+				<p>Поэтому, если вы хотите все делать самостоятельно, то готовьтесь к тому, что вам придется тратить 24 часа в сутки на
+				постоянное развитие и погружение в бизнес, как минимум чтобы не отставать от конкурентов по профессиональным навыкам.</p>
+
+				<p>Самое большое количество времени в бизнесе на Amazon вы тратите на старте, когда вам нужно подготовить всё для запуска
+				продаж:</p>
+
 				<ul>
-
-					<li>Зарегистрировать аккаунт продавца и правильно подготовить документы для верификации. Подготовка документов как правило занимает пару дней, а вот потом вам придется потратить как минимум пару недель на общение с техподдержкой Amazon, чтобы вам открыли аккаунт;</li>
-
-					<li>Найти продукт. Чтобы найти качественный продукт и всё просчитать легко может уйти несколько недель, тут потребуется глубокая аналитика и много расчетов;</li>
-
-					<li>Найти поставщика. Если мы работаем с Китаем, то вы должны знать, что китайцы не самые быстрые ребята в плане продаж, и они могут долго отвечать, долго готовить счёт на оплату, и на это потребуется время;</li>
-
-					<li>Заказать партию товара и доставить его на склад Amazon, ни для кого не секрет что производство и доставка товара занимает много времени;</li>
-
-					<li>Запустить продажи, настроить сервисы для работы, и т.д.</li>
-
+					<li>Зарегистрировать аккаунт продавца и правильно подготовить документы для верификации. Подготовка документов как правило
+					занимает пару дней, а вот потом вам придется потратить как минимум пару недель на общение с техподдержкой Amazon, чтобы
+					вам открыли аккаунт. Иногда бывают случаи, когда Amazon отказывает в регистрации аккаунта, и в этом случае вам нужно
+					будет купить готовый аккаунт;</li>
+					<li>Найти продукт. Чтобы найти качественный продукт и всё просчитать легко может уйти несколько недель, а то и месяцев, тут
+					потребуется глубокая аналитика и много расчетов. Всё зависит от вашего изначального опыта в работе с Amazon</li>
+					<li>Найти поставщика. Если мы работаем с Китаем, то вы должны знать, что китайцы не самые быстрые ребята в плане продаж и
+					общения с клиентами, и они могут долго отвечать, долго готовить счёт на оплату, и на это потребуется время;</li>
+					<li>Заказать партию товара и доставить его на склад Amazon, ни для кого не секрет что производство и доставка товара
+					занимает много времени (в среднем 3 недели на изготовление товара и 3 недели на доставку морем, если не будет
+					форс-мажоров)</li>
+					<li>Запустить продажи, настроить сервисы для работы, настроить рекламу, и т.д.</li>
 				</ul>
 
-				<p>На все эти действия уходит время. В случае, если вы заказываете у нас магазин "под ключ", то всё, кроме регистрации, мы берем на себя.</p>
+				<p>На все эти действия уходит много времени даже у опытного продавца. В случае, если вы заказываете у нас магазин "под
+				ключ", то всё, кроме регистрации, мы берем на себя, вам нужно лишь подготовить документы для регистрации вашего аккаунта
+				на Amazon и пройти регистрацию под нашим руководством (если зарегистрироваться не удалось, то мы купим для вас готовый
+				аккаунт продавца – это включено в стоимость наших услуг).</p>
 
-				<p>После того, как вы запустились и вывели продажи на нужный вам уровень, вам необходимо заниматься исключительно контролем магазина, а именно: контроль наличия товара на складе (если видите, что товар скоро кончится, то связываетесь с вашим поставщиком и дозаказываете), контроль негативных отзывов от клиентов (если вдруг с вашим товаром что-то не то или конкуренты пытаются ухудшить ваши продажи), ну и естественно контроль уровня продаж (чтобы всегда быть в курсе, что всё идет хорошо, нужно контролировать рекламу). На этот контроль достаточно и 15-30 минут за компьютером в день, но иногда нужно дозаказывать товар, оптимизировать рекламу, докупать отзывы, когда наступают такие дни, то на работу может потребоваться несколько часов, а то и весь день.
-				</p>
+				<p>После того, как вы запустились и вывели продажи на нужный вам уровень, вам необходимо заниматься исключительно контролем
+				магазина, а именно: контроль наличия товара на складе (если видите, что товар скоро кончится, то связываетесь с вашим
+				поставщиком и дозаказываете товар), контроль негативных отзывов от клиентов (если вдруг с вашим товаром что-то не то или
+				конкуренты пытаются ухудшить ваши продажи), ну и естественно контроль уровня продаж (чтобы всегда быть в курсе, что всё
+				идет хорошо, нужно контролировать рекламу). На этот контроль достаточно и 15-30 минут за компьютером в день, но иногда
+				нужно дозаказывать товар, оптимизировать рекламу, докупать отзывы, когда наступают такие дни, то на работу может
+				потребоваться несколько часов, а то и весь день. Но всё так же зависит от ваших амбиций. Если вы хотите запустить 1
+				продукт, и на этом остановиться, то вы можете уделять бизнесу и пару часов в неделю, если же вы хотите постоянно
+				развиваться, постоянно запускать новые продукты, оптимизировать свои затраты, улучшать продажи, то бизнесу на Amazon
+				придется посвятить всё ваше время.</p>
 
-				<p>Так же нас часто спрашивают, на какую стратегию нужно меньше времени - Онлайн Арбитраж или Private Label. Отвечаем - при работе по стратегии Онлайн Арбитраж вам придется дозаказывать товар мелкими партиями пару раз в месяц, так же вам нужно будет постоянно проверять ваши товарные пары и искать новые товарные пары. Эта работа постоянная и требует внимания на несколько часов в неделю. При работе по стратегии Private Label основная работа происходит на старте бизнеса, и чем дольше вы будете работать, тем меньше времени вам нужно будет тратить на поддержание продаж товара. Как правило через 3-4 месяца вы сможете управлять магазином по стратегии Privat Label за пару часов в неделю.</p>
+				<p>Когда мы запускаем магазины “под ключ” для своих клиентов, то, как правило в процессе запуска, 99% клиентов понимают,
+				что они бы не справились с работой на Amazon самостоятельно, банально из-за нехватки времени. Поэтому 99% наших клиентов
+				отдает нам магазины в управление.</p>
+
+				<p>Так же нас часто спрашивают, на какую стратегию нужно меньше времени - Онлайн Арбитраж или Private Label. Отвечаем: при
+				работе по стратегии Онлайн Арбитраж всё зависит от вашего бюджета и от количества товаров. Если у вас 10-ки товаров, то
+				вам придется дозаказывать товар мелкими партиями много раз в месяц, а подготовка заказа всегда занимает время. Так же,
+				если вы хотите
+				
+				развиваться, то нужно постоянно искать новые товары для продажи. Эта работа требует постоянного внимания. При работе по
+				стратегии Private Label основная работа происходит на старте бизнеса, и чем дольше вы будете работать, тем меньше
+				времени вам нужно будет тратить на поддержание продаж товара. Как правило через 3-4 месяца после запуска продаж вы
+				сможете оптимизировать работу магазина и управлять магазином по стратегии Private Label за 5-10 часов в неделю, но если
+				вы хотите развиваться в бизнесе на Amazon, а не стоять на одном уровне, то вам придется постоянно развиваться, искать
+				новые продукты, оптимизировать работу, и это будет занимать всё ваше свободное время, и вам обязательно понадобится
+				команда.</p>
+
+				<p>Бизнес на Amazon – это такой же бизнес, как и любой другой, и в нём нужно тратить много времени, чтобы опережать своих
+				конкурентов и зарабатывать.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
