--- a/app/single-tips.html
+++ b/app/single-tips.html
@@ -76,33 +76,83 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>Сегодня хочу поделиться с вами несколькими советами по работе с Amazon. Скажу даже так, продавая на Amazon важно знать одно правило: если вы хотите увеличить вашу чистую прибыль, то первым делом нужно научиться экономить, и поэтому сегодня будет несколько советов по экономии.</p>
+				<p>Продавая на Amazon вам важно знать одно важное правило: если вы хотите увеличить вашу чистую прибыль, то первым делом
+				нужно научиться экономить, и поэтому сегодня будет несколько советов по экономии.</p>
 
-				<p>На Amazon часто бывают случаи, когда кто-то без опыта запускает продукт, продажи идут хорошо, но прибыли почему-то нет. И тут дело как раз в лишних расходах, которые нужно оптимизировать. По неопытности начинающие продавцы в этом случае обычно наоборот пытаются увеличивать продажи, но существенного эффекта это не дает. Если же расходы оптимизировать, то прибыль сразу же появляется, даже без увеличения количества продаж.</p>
+				<p>На Amazon часто бывают случаи, когда новый продавец без опыта запускает продукт, продажи вроде бы идут хорошо, но
+				прибыли почему-то нет. И тут дело как раз в лишних расходах, которые нужно оптимизировать. По неопытности начинающие
+				продавцы не понимают, почему их товар не дает плюс, ведь вроде бы всё хорошо. В этом случае многие пытаются изо всех сил
+				увеличивать продажи, но существенного эффекта увеличение продаж не дает. Если же оптимизировать свои расходы, то, как
+				правило, прибыль сразу же появляется, даже без увеличения количества продаж. Всё дело в том, что, когда вы только
+				запускаете новый продукт первый раз, вы в любом случае несете лишние траты. Каким бы опытным профессионалом вы бы не
+				были, во время заказа первой партии товара вы в любом случае понесете лишние затраты на производство, доставку,
+				упаковку, расфасовку товара.</p>
 
-				<p>Продавая на Amazon вы должны чётко понимать, что помимо себестоимости самого товара у вас есть и другие расходы, а именно: доставка товара, комиссии Amazon, хранение товара, реклама, плата за возвраты и утилизацию использованного товара, и пр. Как правило на первых порах, когда вы только заходите на Amazon, вы не заморачиваетесь с данными статьями расходов, считая их за незначительные. На самом же деле эти статьи расходов часто съедают большую часть прибыли. По экономии на этих расходах мы сегодня как раз таки и поговорим.</p>
+				<p>Продавая на Amazon, вы должны чётко понимать, что помимо себестоимости самого товара у вас есть и другие расходы, а
+				именно: доставка товара, комиссии Amazon, хранение товара, реклама, плата за возвраты и утилизацию использованного
+				товара, и пр. Как правило на первых порах, когда вы только заходите на Amazon, вы не можете оптимизировать данные статьи
+				расходов, т.к. у вас просто-напросто нет данных, чтобы сразу же оптимизировать все расходы.</p>
 
 				<h2>1. Работа с Китаем</h2>
 
-				<p>При работе с китайскими поставщиками, не забывайте, что мы должны показывать всем, что мы очень опытные и нас нельзя обмануть. Для этого нужно показать, что мы понимаем хотя бы простые правила работы. Одно из таких правил: условия поставки, Инкотермс. Кто не знает, что это, рекомендую почитать, есть в открытом доступе в интернете. Так вот, первая непредвиденная трата - это условие поставки. Т.к. если вы отправляете товар через стороннюю организацию, а не через китайских производителей ваших товаров, то вам придется забирать товар, и на это придется тратить свои кровные средства, в то время когда по условиям поставки в договоре прописано например вместе FOB EXW, что значит, что производитель передаст вам груз в месте где товар производится, а не отправит его вам по адресу склада вашего агента по отправке товара. Вот и считайте что вам придётся дополнительно платить за PickUP (забором груза).</p>
+				<p>При работе с китайскими поставщиками, не забывайте, что мы должны показывать всем, что мы очень опытные и нас нельзя
+				обмануть. Для этого нужно показать, что мы понимаем хотя бы простые правила работы. Одно из таких правил: условия
+				поставки, Инкотермс. Кто не знает, что это, рекомендуем почитать, есть в открытом доступе в интернете. Так вот, первая
+				непредвиденная трата — это условие поставки. Т.к. если вы отправляете товар через стороннюю организацию, а не через
+				китайских производителей ваших товаров, то вам придется забирать товар, и на это придется тратить свои кровные средства,
+				в то время когда по условиям поставки в договоре прописано например вместе FOB EXW, что значит, что производитель
+				передаст вам груз в месте где товар производится, а не отправит его вам по адресу склада вашего агента по отправке
+				товара. Вот и считайте, что вам придётся дополнительно платить за PickUP (забором груза). При работе с Китаем у вас есть
+				множество точек экономии. Вы можете найти более дешевый завод или вы можете попросить скидку у вашего поставщика (вы
+				можете показать поставщику статистику ваших продаж и привести расчет, почему поставщик должен сделать скидку). Даже на
+				такой мелочи, как правильная упаковка товара, можно сэкономить приличные суммы денег.</p>
 
 				<h2>2. Доставка</h2>
 
-				<p>Я уже неоднократно это говорил, но считайте доставку товара несколькими способами через разные компании и выбирайте оптимальный способ для вас. Логистических компаний очень много, их легко найти в интернете, и обязательно уделите внимание этому моменту, чтобы не терять лишние деньги. Со временем вы выберете для себя самые приятные в работе с доставкой компании, и у вас будет налажен этот процесс. На первоначальном этапе многие не уделяют этому моменту должное внимание. Какая-то компания предлагает условия, вам кажется что это норм, и вы соглашаетесь, а на деле вы могли бы заморочиться и сэкономить к примеру даже те же 500$, итого с продажи партии ваша прибыль была бы выше на те же 500$. Из таких мелочей и складывается успешная работа на Amazon.</p>
+				<p>Считайте доставку товара несколькими способами через разные компании и выбирайте оптимальный способ для вас.
+				Логистических компаний очень много, их легко найти в интернете, и обязательно уделите внимание этому моменту, чтобы не
+				терять лишние деньги. Со временем вы выберете для себя самые приятные в работе с доставкой компании, и у вас будет налажен этот процесс. На первоначальном этапе многие не уделяют этому моменту должное внимание. Какая-то компания предлагает условия, и вам кажется, что они вам подходят, и вы соглашаетесь, не
+				сделав аудит рынка. На деле вы могли бы поискать другие варианты и сэкономить, к примеру, хотя бы 500$, итого с продажи
+				партии товара ваша прибыль была бы выше на те же 500$. Из таких мелочей и складывается успешная работа на Amazon.</p>
 	
 				<h2>3. Возвраты и утилизация товара</h2>
 
-				<p>Перейдем к теме возвратов товара. Политика Amazon по возвратам очень лояльна по отношению к клиентам, и каким бы качественным не был продукт, любой товар можно вернуть без проблем. Из-за этого на Amazon есть такие клиенты, которые заказывают всё подряд, а потом возвращают то, что им не понравилось или было изначально не нужно. Вроде удобно для клиента, но продавец может потерять на этом огромное количество денег, т.к. если делать возврат на Amazon, то вы потеряете комиссию, и если товар не годен к продаже, то потеряете себестоимость товара плюс расходы за уничтожение товара.</p>
+				<p>Перейдем к теме возвратов товара. Политика Amazon по возвратам очень лояльна по отношению к клиентам, и каким бы
+				качественным не был продукт, любой товар можно вернуть без проблем. Возвраты у вас будут всегда, даже если ваш продукт
+				очень качественный. Из-за политики возвратов на Amazon есть такие клиенты, которые заказывают всё подряд, а потом
+				возвращают то, что им не понравилось или было изначально не нужно. Вроде удобно для клиента, но продавец может потерять
+				на этом огромное количество денег, т.к. если делать возврат на Amazon, то вы потеряете комиссию, и если товар не годен к
+				продаже, то потеряете себестоимость товара плюс расходы за уничтожение товара.</p>
 
-				<p>Т.к. на возвраты вы практически никак повлиять не можете (делай или не делай качественный продукт, а возвраты в бизнесе на Amazon всё равно будут), то нужно работать по возвратам с препцентрами. За утилизацию и возвраты Amazon снимает с вас довольно внушительные суммы, и если посчитать, то это очень бьет по карману и в некоторых случаях съедает всю прибыль. Обратным адресом для возврата нужно указывать препцентр. И если идет возврат, то вы платите препцентру несколько долларов, чтобы они упаковали ваш товар как новый, и у продукта появляется вторая жизнь, а вы абсолютно не несете убытков и не платите большую комиссию Amazon за утилизацию товара.</p>
+				<p>Т.к. на возвраты вы практически никак повлиять не можете (конечно, нужно понимать, что изначально вы просто обязаны
+				продавать очень качественный продукт), то нужно работать по возвратам с препцентрами. За утилизацию и возвраты Amazon
+				снимает с вас довольно внушительные суммы, и если посчитать, то это очень бьет по карману и в некоторых случаях съедает
+				всю прибыль. Обратным адресом для возврата нужно указывать препцентр. И если идет возврат, то вы платите препцентру
+				несколько долларов, чтобы они упаковали ваш товар как новый, и у продукта появляется вторая жизнь, а вы абсолютно не
+				несете убытков и не платите большую комиссию Amazon за утилизацию товара.</p>
 
-				<h2>4. Хранение товара на складе</h2>
+				<h2>4. Хранение и сортировка товара</h2>
 
-				<p>Начнем с того, что во время того, как вы выбираете продукт для продажи на Amazon, вам нужно обращать внимание на стоимость хранение этого продукта на складе Amazon, т.к. это может стать очень большой статьей расходов для вас. Посчитать это достаточно просто через бесплатный плагин от Helium10. Если вы выбрали продукт, который занимает много места, то Amazon будет снимать с вас достаточно внушительные суммы за хранение, и вам придется искать препцентр, как перевалочный пункт ваших запасов.</p>
+				<p>Начнем с того, что во время того, как вы выбираете продукт для продажи на Amazon, вам нужно обращать внимание на
+				стоимость хранение этого продукта на складе Amazon, т.к. это может стать очень большой статьей расходов для вас.
+				Посчитать это достаточно просто через бесплатный плагин от Helium10. Если вы выбрали продукт, который занимает много
+				места, то Amazon будет снимать с вас достаточно внушительные суммы за хранение, и вам придется искать препцентр, как
+				перевалочный пункт ваших запасов.</p>
 
-				<p>Препцентр конечно будет брать с вас деньги за хранение товара, но это малая часть от того, что с вас будет брать Amazon. Да и следить за запасами гораздо легче: отправили товар на препцентр, и довозите на склад Amazon, когда надо в течении нескольких дней. На Amazon я рекомендую держать вам такое количество товара, которого хватит на 1-1,5 месяцев продаж максимум. В этом случае расходы за хранение будут совсем небольшими и работать будет выгодно.</p>
+				<p>Препцентр, конечно, будет брать с вас деньги за хранение товара, но это малая часть от того, что с вас будет брать
+				Amazon. Да и следить за запасами гораздо легче: отправили товар на препцентр, и довозите на склад Amazon, когда надо в
+				течении нескольких дней. На Amazon мы рекомендуем держать вам такое количество товара, которого хватит на 1-1,5 месяцев
+				продаж максимум. В этом случае расходы за хранение будут совсем небольшими и работать будет выгодно.</p>
 
-				<p>В завершении этого поста хочу сказать, что экономия в работе с Amazon очень - это один из ключевых моментов на первоначальном этапе, и перед тем как вы решите улучшать продукт (и увеличивать его себестоимость) или увеличивать продажи, чтобы заработать больше, обязательно убедитесь, что все ваши расходы качественно оптимизированны и вы не теряете лишние деньги.</p>
+				<p>Так же вам нужно позаботиться о правильной сортировке товара. Еще перед заказом партии у поставщика нужно подумать о
+				том, сколько будет стоить распаковка товара на препцентре, сколько будет стоить наклейка баркодов, и так далее. Вроде бы это мелочь, но если это
+				не продумать, то вы потеряете очень много денег.</p>
+
+				<p>Экономия в работе с Amazon - это один из ключевых моментов на этапе после первых продаж товара, и перед тем как вы
+				решите улучшать продукт (и увеличивать его себестоимость) или увеличивать продажи, чтобы заработать больше, обязательно
+				убедитесь, что все ваши расходы качественно оптимизированы и вы не теряете лишние деньги. Важно понимать, что сразу же
+				все сделать идеально не получится, но нужно улучшать показатели своего товара с каждой новой партией, чтобы со временем
+				прийти к желаемым результатам.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
