--- a/app/single-when-start.html
+++ b/app/single-when-start.html
@@ -82,7 +82,11 @@
 
 				<p>Например, лично я начинал бизнес на Amazon приблизительно в конце января — пожалуй не самое удачное время для старта по общей логике, но ничего, вроде как справился. Кстати, мой партнер Влад начинал бизнес на Amazon летом — тоже вроде бы не лучшее время для старта торговли. Но, по сути, это не имеет никакого значение. Например, чтобы зарабатывать 3000$ в месяц, вам надо делать всего 10 продаж в день с прибылью 10$ с продажи. На Amazon ежедневно делается около 30 000 000 продаж. Ну скажите, есть ли какое-то определенное время, чтобы вам было сложнее сделать эти 10 продаж в день? Думаю, очевидно, что нет. Главное, чтобы вы приняли взвешенное решение, что хотите начать бизнес на Amazon, и тогда можете начинать прямо сейчас</p>
 
-				<p>Важно не то, когда вы начнете. Важен только ваш подход. Если вы делаете всё правильно, то зарабатываете даже в “не сезон”, хотя никакого “не сезона” в бизнесе на Amazon нет, продажи растут всегда.</p>
+				<p>Важно не то, когда вы начнете. Важен только ваш подход. Если вы делаете всё правильно, то зарабатываете даже в “не
+				сезон”, хотя никакого “не сезона” в бизнесе на Amazon нет, продажи растут всегда. Ниже вы можете увидеть отчет Amazon о
+				продажах по кварталам в период с 1 квартала 2018 по 3 квартал 2020 года. На графике видно, что продажи растут всегда, и
+				следующий год всегда лучше предыдущего, так что подгадывать какой-то специальный момент для бизнеса на Amazon абсолютно
+				не обязательно.</p>
 
 				<img src="img/blog/single-when-start-img-1.jpg" alt="image" class="img-responsive">
 
