--- a/app/single-features.html
+++ b/app/single-features.html
@@ -76,29 +76,83 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>Всем привет! Одно из ключевых преимуществ бизнеса на Amazon - это работа на более экономически развитом рынке США с более платежеспособной аудиторией, если сравнивать с Россией и СНГ. С этим фактом поспорить трудно, но в тоже время, для того чтобы успешно торговать на Amazon и зарабатывать хорошие деньги, нужно понимать американских покупателей и вообще американский рынок, который естественно очень сильно отличается от нашего. Сегодня я хочу рассказать о ключевых нюансах рынка в США, а так же дам совет, как самостоятельно разобраться в этой сфере.</p>
+				<p>Одно из ключевых преимуществ бизнеса на Amazon — это работа на более экономически развитом рынке США с более
+				платежеспособной аудиторией, если сравнивать с Россией и СНГ. С этим фактом поспорить трудно, но в тоже время, для того
+				чтобы успешно торговать на Amazon и зарабатывать хорошие деньги, нужно понимать американских покупателей и вообще
+				американский рынок, который естественно очень сильно отличается от нашего. Сегодня мы расскажем вам о ключевых нюансах
+				рынка в США, а так же дадим совет, как самостоятельно разобраться в этой сфере.</p>
 
-				<p>Для начала давайте договоримся, что мы делаем оценку опираясь на показатели среднестатестического жителя США, это поможет нам понять «основную массу населения» этой страны. На что идут основные расходы среднестатистического человека в США? Оплата жилья, еда, автомобиль, страховки, одежда, развлечения, прочие покупки. Из этих расходов оплата жилья — это либо аренда, либо ипотека (в среднем на это уходит 900$ в месяц у среднестатистического американца, в зависимости от региона), еда — согласно официальной статистике американцы тратят около 7% от дохода на еду (в России около 30%), т.е. около 250$ при среднем доходе около 3500$ в месяц, автомобиль в среднем обходится в 400$ с учетом страховок, кредита на авто (в США большинство покупок делается в кредит), бензина. Прочие страховки обходятся в 150$ в месяц. К одежде в США относятся очень просто, и тратят на неё в среднем 100$ в месяц. Так же надо учесть траты на телефон и интернет — 200$ в месяц. Весь остальной доход можно тратить на развлечения, прочие покупки, накопление средств, и т.д, т.е. простым языком — свободные траты.</p>
+				<p>Для начала давайте договоримся, что мы делаем оценку опираясь на показатели среднестатистического жителя США, это
+				поможет нам понять «основную массу населения» этой страны. На что идут основные расходы среднестатистического человека в
+				США? Оплата жилья, еда, автомобиль, страховки, одежда, развлечения, прочие покупки. Из этих расходов оплата жилья — это
+				либо аренда, либо ипотека (в среднем на это уходит 900$ в месяц у среднестатистического американца), еда — согласно
+				официальной статистике американцы тратят около 7% от дохода на еду (в России около 30%), т.е. около 250$ при среднем
+				доходе около 3500$ в месяц, автомобиль в среднем обходится в 400$ с учетом страховок, кредита на авто (в США большинство
+				покупок делается в кредит), бензина. Прочие страховки обходятся в 150$ в месяц. К одежде в США относятся очень просто, и
+				тратят на неё в среднем 100$ в месяц. Так же надо учесть траты на телефон и интернет — 200$ в месяц. Весь остальной
+				доход можно тратить на развлечения, прочие покупки, накопление средств, и т.д, т.е. простым языком — свободные траты.</p>
 
-				<p>Для чего я привел эти данные? Всё просто, чтобы вы понимали, что самый среднестатистический американец с доходом 3500$ имеет каждый месяц в свободном распоряжении сумму около 1500$, которую можно расходовать по своему усмотрению на любые нужды. В рублях это около 100 000 рублей. В России средняя зарплата около 45 000 рублей, и из них у среднестатистического по статистике около 12 000 уходят только на еду, еще надо оплатить жилье, и произвести другие расходы. В хорошем случае при таком доходе остается тысяч 10 рублей на свободные расходы. Соответственно первое, что важно понимать — даже при том, что в США жизнь дороже чем в России, у среднестатистического жителя США на свободные расходы остается примерно в 10 раз больше денег, чем у среднестатистического жителя России, соответственно, ко всем мелким тратам жители США относятся намного легче.</p>
+				<p>Для чего мы приводим эти данные? Всё просто, чтобы вы понимали, что самый среднестатистический американец с доходом 3500$
+				имеет каждый месяц в свободном распоряжении сумму около 1500$, которую можно расходовать по своему усмотрению на любые
+				нужды. В рублях это около 100 000 рублей. В России средняя зарплата около 45 000 рублей, и из них у
+				среднестатистического по статистике около 12 000 уходят только на еду, еще надо оплатить жилье, и произвести другие
+				расходы. В хорошем случае при таком доходе остается 10 тысяч рублей на свободные расходы. Соответственно первое, что
+				важно понимать — даже при том, что в США жизнь дороже чем в России, у среднестатистического жителя США на свободные
+				расходы остается примерно в 10 раз больше денег, чем у среднестатистического жителя России, соответственно, ко всем
+				мелким тратам жители США относятся намного легче.</p>
 
-				<p>Теперь давайте разберемся, как же живут люди в США. Первое, что бросается в глаза — это большие расстояния, из-за развитости городски агломераций (несколько городов соединены в один, и люди могут работать и жить на очень большом расстоянии). Из-за этого в США гораздо больше чем автомобилей, чем у нас. Согласно данным в википедии, в России только 30% населения имеет собственный автомобиль. В США же около 80% населения имеет собственный автомобиль. При этом население США примерно в 2 раза больше, итого, если я правильно умею считать, машин в США примерно в 5-6 раз больше, чем в России. Соответственно рынок автоаксессуаров и прочих вещей для автомобиля так же в 5-6 раз больше, а учитывая покупательскую способность и свободные средства населения, рынок значительно больше. Например, мы недавно нашли вариант продажи товара на Amazon по цене 21-25$ и с себестоимостью (с учетом доставки) около 3$, и потенциальными 50 продажами в день. К слову, по моим скромным оценкам, в России бы такой товар продавался по цене 500-900 рублей и высокими показателями бы были 50 продаж в месяц (бегло посмотрел аналитику через Яндекс Вордстат и очень грубо прикинул цифры).</p>
+				<p>Теперь давайте разберемся, как же живут люди в США. Первое, что бросается в глаза — это большие расстояния, из-за
+				развитости городских агломераций (несколько городов соединены в один, и люди могут работать и жить на очень большом
+				расстоянии). Из-за этого в США гораздо больше автомобилей, чем у нас. Согласно данным в Википедии, в России только 30%
+				населения имеет собственный автомобиль. В США же около 80% населения имеет собственный автомобиль. При этом население
+				США примерно в 2 раза больше, итого, машин в США примерно в 5-6 раз больше, чем в России. Соответственно рынок авто
+				аксессуаров и прочих вещей для автомобиля так же в 5-6 раз больше, а учитывая покупательскую способность и свободные
+				средства населения, рынок значительно больше. Например, мы недавно нашли вариант продажи товара на Amazon по цене 21-25$
+				и потенциальными 50 продажами в день. К слову, по нашим скромным оценкам, в России бы такой товар продавался по цене
+				500-900 рублей и высокими показателями бы были 50 продаж в месяц (данные на основе аналитики через Яндекс Вордстат).</p>
 
-				<p>Далее перейдем к месту жительства. У нас большинство людей живут в квартирах, и очень большое количество людей живут в квартирах маленькой площади, например на семью из 4 человек у нас в России «нормально» иметь квартиру 50 м2. В США же большое количество людей живут в частных домах, и для такой же семьи из 4 человек будет нормальным дом площадью 150-200 м2. А теперь представьте, сколько всяких мелких бытовых вещей нужно чтобы обставить дом 200 м2 по сравнению с квартирой 50 м2? Не забудьте учесть, что в маленькую квартиру впихивают всё по надобности, и свободного места нет. В большом доме же приходится искусственно занимать свободное пространство. Соответственно, в США ты легко можешь продавать один вид какой-нибудь «вазы для цветов» через Amazon, и зарабатывать с неё 10к$ в месяц, потому что объем рынка кардинально отличается. А когда о «10к$ в месяц на вазочке» говорят в России, то возникает мысль «что это за дичь тут впаривают?». Поэтому обращайте внимание на нюансы и на размеры рынка.</p>
+				<p>Далее перейдем к месту жительства. У нас большинство людей живут в квартирах, и очень большое количество людей живут в
+				квартирах маленькой площади, например на семью из 4 человек у нас в России «нормально» иметь квартиру 50 м2. В США же
+				большое количество людей живут в частных домах, и для такой же семьи из 4 человек будет нормальным дом площадью 150-200
+				м2. А теперь представьте, сколько всяких мелких бытовых вещей нужно чтобы обставить дом 200 м2 по сравнению с квартирой
+				50 м2? Не забудьте учесть, что в маленькую квартиру впихивают всё по надобности, и свободного места нет. В большом доме
+				же приходится искусственно занимать свободное пространство. Соответственно, в США ты легко можешь продавать один вид
+				какой-нибудь «вазы для цветов» через Amazon, и зарабатывать с неё 10 тысяч $ в месяц, потому что объем рынка кардинально
+				отличается. А когда о «10 тысячах $ в месяц на вазочке» говорят в России, то естественно у многих возникает мысль «Что
+				это за бред? Какие 10 000 долларов в месяц на вазочке? Такого не бывает». Но если вы понимаете рынок США, то такого
+				вопроса у вас не возникнет. Поэтому обращайте внимание на нюансы и на размеры рынка.</p>
 
-				<p>Тот же пример с домашними животными. Заходим в Яндекс и смотрим статистику. В США 70 млн домашних собак. В России 12,5 млн собак. В США 75 млн кошек. В России 18 млн кошек. Понимаете насколько там развит рынок аксессуаров для животных? Такие примеры можно приводить с десятками сфер, главное понимать различия.</p>
+				<p>Тот же пример с домашними животными. Заходим в Яндекс и смотрим статистику. В США 70 млн домашних собак. В России 12,5
+				млн собак. В США 75 млн кошек. В России 18 млн кошек. Понимаете, насколько там развит рынок аксессуаров для животных?
+				Такие примеры можно приводить с десятками сфер, главное понимать различия.</p>
 
-				<p>Что делать с этими данными про то, что в США эти сферы развитие? Заходите в инсту, ютуб, форумы, блоги, и смотрите как живут в США, замечаете нюансы, смотрите прикольные идеи для товаров, анализируете, и находите возможности для заработка. Покупателю в США требуется намного больше «мелочей» для жизни, чем жителю России, и у жителя США есть возможность эти «мелочи» свободно покупать.</p>
+				<p>Что делать с этими данными про то, что в США эти сферы более развиты? Заходите в Инстаграм, Ютуб, Форумы, Блоги, и
+				смотрите, как живут в США, подмечайте нюансы, смотрите интересные идеи для товаров, анализируйте, и находите возможности
+				для заработка. Покупателю в США требуется намного больше «мелочей» для жизни, чем жителю России, и у жителя США есть
+				возможность эти «мелочи» свободно покупать.</p>
 
-				<p>Теперь давайте дам наводку, на что обращают внимание при покупке товаров в США. Большинство людей в США действительно верят отзывам, и опираются при выборе продукта на обратную связь других пользователей. Это один из самых важных критериев над которым нужно работать. В США человек перед покупкой в 95% случаев изучает отзывы, а России наверное только процентов 30% людей это делают и подходят к выбору не так внимательно.</p>
+				<p>Теперь давайте поговорим о том, на что обращают внимание при покупке товаров в США. Большинство людей в США
+				действительно верят отзывам, и опираются при выборе продукта на обратную связь других пользователей. Это один из самых
+				важных критериев, над которым нужно работать в бизнесе на Amazon. В США человек перед покупкой в 95% случаев изучает
+				отзывы, а России, наверное, только процентов 30% людей это делают и подходят к выбору не так внимательно. В России
+				отзывы можно легко накрутить, а также сами компании по отзывам сами берут деньги, чтобы оставить о вас хорошие отзывы
+				(ну или плохие, если вы не платите). На Amazon такого нет, и отзывы приходится набирать честно, поэтому им и доверяют.</p>
 
-				<p>В большинстве вещей практически всем американцам абсолютно пофиг на бренд, поэтому большинство мелких бытовых вещей легко покупаются у ноунеймов и это просто огромнейший плюс. Вы можете произвести товар под своим новосозданным брендом, и никому нет до этого дела. Как я уже писал выше, даже на одежду американцы тратят в среднем 100$ в месяц, соответственно легко можно посчитать, что это далеко не брендовые вещи.</p>
+				<p>При этом практически всем американцам абсолютно без разницы на бренд, который они покупают, поэтому большинство мелких
+				бытовых вещей легко покупаются у никому неизвестных брендов с Amazon и это просто огромнейший плюс. Вы можете произвести
+				товар под своим только что созданным брендом, и никому нет до этого дела. Как мы уже писали выше, даже на одежду
+				американцы тратят в среднем 100$ в месяц, соответственно, легко можно посчитать, что это далеко не брендовые вещи.</p>
 
-				<p>Вопрос цены в США так же не влияет ключевую роль, если разница в цене между конкурентами 20-30%, то главным все равно будет качество товара и отзывы от других людей.</p>
+				<p>Вопрос цены в США так же не влияет ключевую роль, если разница в цене между конкурентами 20-30%, то главным все равно
+				будет качество товара и отзывы от других людей. Поэтому, вам обязательно нужен качественный продукт, а уж выбрать товар
+				для продаж можно из огромного количества ниш, рынок США это позволяет.</p>
 
 				<h4>Как понять рынок США еще лучше?</h4>
 
-				<p>Мой совет: почитайте статьи о расходах американцев, на что они тратят деньги, как они что-либо покупают, посмотрите влоги на английском языке (самого минимального понимания языка будет достаточно), посмотрите влоги русских людей, которые переехали в США и раскатывают о жизни там, ну и конечно же посмотрите американские фильмы или сериалы про обычную американскую жизнь, это даст вам больше понимания об этом вопросе.</p>
+				<p>Наш совет: почитайте статьи о расходах американцев в интернете, на что они тратят деньги, как они что-либо покупают,
+				посмотрите влоги на английском языке (самого минимального понимания языка будет достаточно), посмотрите влоги русских
+				людей, которые переехали в США и расказывают о жизни там, ну и конечно же посмотрите американские фильмы или сериалы про
+				обычную американскую жизнь, это даст вам больше понимания об этом вопросе.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
